--- a/portal/src/main/resources/i18n/messages_bg.properties
+++ b/portal/src/main/resources/i18n/messages_bg.properties
@@ -1,3 +1,4 @@
+_action.OpenInNewWindow=Отваря се в нов прозорец
 _action.add.annotation=null
 _action.add.tag=Добави таг
 _action.advanced.search=Разширено търсене
@@ -16,9 +17,7 @@ _action.search=Търсене
 _action.see.all.related.items=Виж всички подобни обекти
 _action.send=Изпрати
 _action.share.with.friend=Сподели с приятел
-_action.videos=Видео
 _action.view.in.original.context=Виж в оригиналния контекст
-_actionOpenInNewWindow=Отваря се в нов прозорец
 _facet.by.collection=null
 _facet.by.country=По страна
 _facet.by.date=По дата
@@ -27,11 +26,6 @@ _facet.by.provider=По доставчик
 _facet.by.type=По тип
 _facet.by.user.tag=По потребителски таг
 _facet.by.year=null
-_failure.search.saved=Търсенето не можа да се запише
-_header.actions=Действия
-_header.relatedcontent=Подобно съдържание
-_inc_result_table_full.description=Описание
-_language_select.italian=Италиански
 _locale.AL=Албания
 _locale.AM=Армения
 _locale.AT=Австрия
@@ -86,6 +80,7 @@ _locale.fr=Френски
 _locale.hr=Хърватски
 _locale.hu=Унгарски
 _locale.is=Исландски
+_locale.it=Италиански
 _locale.lb=Люксембургски
 _locale.lt=Литовски
 _locale.lv=Латвийски
@@ -139,6 +134,7 @@ _metadata.type.images=Изображения
 _metadata.type.sounds=Звукови файлове
 _metadata.type.texts=Текстове
 _metadata.type.video=Видео
+_metadata.type.videos=Видео
 _mine.date.saved=Датата е запазена
 _mine.delete=Изтрий
 _mine.email.address=Е-mail адрес
@@ -158,11 +154,14 @@ _mine.saved.searches=Запазени търсения
 _mine.saved.tags=Запазени тагове
 _mine.user.information=Данни за потребителя
 _mine.user.registration.notification.succeed=Регистрирахте се успешно
+_mine.user.validation.username.in.use=е в употреба. Моля изберете друго потребителско име
 _mine.username=Потребителско име
 _portal.menu.languagedropdownlist=Език
+_portal.ui.message.actions=Действия
 _portal.ui.message.less=По-малко
 _portal.ui.message.more=Повече
 _portal.ui.message.noscript=За да използвате този уебсайт по оптимален начин, трябва да e активиран JavaScript
+_portal.ui.message.relatedcontent=Подобно съдържание
 _portal.ui.message.success.search.saved=Търсенето е запазено
 _portal.ui.message.usertags=Потребителски тагове
 _portal.ui.messages.items=Обекти
@@ -170,10 +169,11 @@ _portal.ui.navigation.matchesfor=Съвпадения за
 _portal.ui.navigation.next=Следващо
 _portal.ui.navigation.of=от
 _portal.ui.navigation.page=Страница
+_portal.ui.navigation.results=Резултати
 _portal.ui.notification.error=Грешка
+_portal.ui.notification.failure.search.saved=Търсенето не можа да се запише
 _portal.ui.notification.noitemsfound=Няма намерени обекти
 _portal.ui.reset.searchbox=Рестартиране
-_portal.ui.results=Резултати
 _portal.ui.viewingrelateditems=Виждате подобни обекти
 _register-request.emailalreadyregistered=Този e-mail е регистриран вече
 _register.email.has.been.sent=Изпратен е e-mail на следния адрес
@@ -204,6 +204,7 @@ _search.boolean.or=или
 _search.field.any.field=което и да е
 _search.field.creator=Създател
 _search.field.date=Дата
+_search.field.description=Описание
 _search.field.provider=Провайдер
 _search.field.subject=Тема
 _search.field.title=Заглавие
@@ -273,4 +274,3 @@ _unused_portal.ui.message.view.as.xml=Виж във вид на XML
 _unused_portal.ui.message.view.with.labels=Виж с етикетите
 _unused_portal.ui.message.view.without.labels=Виж без етикетите
 _unused_portal.ui.message.you.have.search.for=Вие търсехте...
-_unused_validation.username.in.use=е в употреба. Моля изберете друго потребителско име
