--- a/portal/src/main/resources/i18n/messages_ca.properties
+++ b/portal/src/main/resources/i18n/messages_ca.properties
@@ -1,3 +1,4 @@
+_action.OpenInNewWindow=S'obre a una finestra nova
 _action.add.annotation=null
 _action.add.tag=Afegir una etiqueta
 _action.advanced.search=Cerca avançada
@@ -16,9 +17,7 @@ _action.search=Cerca
 _action.see.all.related.items=Veure tots els ítems relacionats
 _action.send=Enviar
 _action.share.with.friend=Compartir amb un amic
-_action.videos=Videos
 _action.view.in.original.context=Veure en el context original
-_actionOpenInNewWindow=S'obre a una finestra nova
 _facet.by.collection=null
 _facet.by.country=Per país
 _facet.by.date=Per data
@@ -27,11 +26,6 @@ _facet.by.provider=Per proveïdor
 _facet.by.type=Per tipus
 _facet.by.user.tag=Per etiqueta d'usuari
 _facet.by.year=null
-_failure.search.saved=Guardar la cerca ha fallat
-_header.actions=Accions
-_header.relatedcontent=Contingut relacionat
-_inc_result_table_full.description=Descripció
-_language_select.italian=Italià
 _locale.AL=Albània
 _locale.AM=Armènia
 _locale.AT=Àustria
@@ -86,6 +80,7 @@ _locale.fr=Francès
 _locale.hr=Croat
 _locale.hu=Hongarès
 _locale.is=Islandès
+_locale.it=Italià
 _locale.lb=Luxemburguès
 _locale.lt=Lituà
 _locale.lv=Letó
@@ -139,6 +134,7 @@ _metadata.type.images=Imatges
 _metadata.type.sounds=Sons
 _metadata.type.texts=Textos
 _metadata.type.video=Video
+_metadata.type.videos=Videos
 _mine.date.saved=Data guardada
 _mine.delete=Esborrar
 _mine.email.address=Adreça de correu electrònic
@@ -158,11 +154,14 @@ _mine.saved.searches=Cerques guardades
 _mine.saved.tags=Etiquetes guardades
 _mine.user.information=Informació de l'usuari
 _mine.user.registration.notification.succeed=Us heu registrat amb èxit
+_mine.user.validation.username.in.use=és en ús. Si us plau, escolliu un altre nom d'usuari
 _mine.username=Nom d'usuari
 _portal.menu.languagedropdownlist=Llengua
+_portal.ui.message.actions=Accions
 _portal.ui.message.less=Menys
 _portal.ui.message.more=Més
 _portal.ui.message.noscript=Per a un ús òptim d'aquest lloc web cal tenir JavaScript activat
+_portal.ui.message.relatedcontent=Contingut relacionat
 _portal.ui.message.success.search.saved=Cerca guardada
 _portal.ui.message.usertags=Etiquetes d'usuari
 _portal.ui.messages.items=Ítems
@@ -170,10 +169,11 @@ _portal.ui.navigation.matchesfor=Coincidències per a
 _portal.ui.navigation.next=Següent
 _portal.ui.navigation.of=de
 _portal.ui.navigation.page=Pàgina
+_portal.ui.navigation.results=Resultats
 _portal.ui.notification.error=Error
+_portal.ui.notification.failure.search.saved=Guardar la cerca ha fallat
 _portal.ui.notification.noitemsfound=No s'han trobat ítems
 _portal.ui.reset.searchbox=Reinicialitzar
-_portal.ui.results=Resultats
 _portal.ui.viewingrelateditems=Esteu visualitzant ítems relacionats
 _register-request.emailalreadyregistered=Aquest correu electrònic ja ha estat registrat
 _register.email.has.been.sent=S'ha enviat un correu electrònic a l'adreça següent
@@ -204,6 +204,7 @@ _search.boolean.or=o
 _search.field.any.field=Qualsevol camp
 _search.field.creator=Creador
 _search.field.date=Data
+_search.field.description=Descripció
 _search.field.provider=Proveïdor
 _search.field.subject=Matèria
 _search.field.title=Títol
@@ -273,4 +274,3 @@ _unused_portal.ui.message.view.as.xml=Visualització en XML
 _unused_portal.ui.message.view.with.labels=Visualització amb etiquetes
 _unused_portal.ui.message.view.without.labels=Visualització sense etiquetes
 _unused_portal.ui.message.you.have.search.for=Heu cercat
-_unused_validation.username.in.use=és en ús. Si us plau, escolliu un altre nom d'usuari
