--- a/portal/src/main/resources/i18n/messages_cs.properties
+++ b/portal/src/main/resources/i18n/messages_cs.properties
@@ -1,3 +1,4 @@
+_action.OpenInNewWindow=Otevře se v novém okně
 _action.add.annotation=null
 _action.add.tag=Přidej tag
 _action.advanced.search=Pokročilé vyhledávání
@@ -16,9 +17,7 @@ _action.search=Hledej
 _action.see.all.related.items=Veškerý příbuzný obsah
 _action.send=Pošli
 _action.share.with.friend=Sdílej s přáteli
-_action.videos=Videa
 _action.view.in.original.context=Zobraz v původním kontextu
-_actionOpenInNewWindow=Otevře se v novém okně
 _facet.by.collection=null
 _facet.by.country=Podle země
 _facet.by.date=Podle data
@@ -27,11 +26,6 @@ _facet.by.provider=Podle poskytovatele
 _facet.by.type=Podle typu
 _facet.by.user.tag=Podle uživatele
 _facet.by.year=null
-_failure.search.saved=Chyba ukládání výsledků vyhledávání
-_header.actions=Výběr akcí
-_header.relatedcontent=Příbuzný obsah
-_inc_result_table_full.description=Popis
-_language_select.italian=Italština (ita)
 _locale.AL=Albánie
 _locale.AM=Arménie
 _locale.AT=Rakousko
@@ -86,6 +80,7 @@ _locale.fr=Francouzština (fre)
 _locale.hr=Chorvatština (hrv)
 _locale.hu=Maďarština (hun)
 _locale.is=Islandština (ice)
+_locale.it=Italština (ita)
 _locale.lb=lucemburština (ltz)
 _locale.lt=Litevština (lit)
 _locale.lv=Lotyština (lav)
@@ -139,6 +134,7 @@ _metadata.type.images=Obrazy
 _metadata.type.sounds=Zvukový materiál
 _metadata.type.texts=Texty
 _metadata.type.video=Video
+_metadata.type.videos=Videa
 _mine.date.saved=Uložené datum
 _mine.delete=Vymaž
 _mine.email.address=E-mail
@@ -158,11 +154,14 @@ _mine.saved.searches=Uložená vyhledávání
 _mine.saved.tags=Uložená pole
 _mine.user.information=Informace pro uživatele
 _mine.user.registration.notification.succeed=Registrace proběhla úspěšně
+_mine.user.validation.username.in.use=Toto uživatelské jméno je již obsazeno. Vyber si jiné
 _mine.username=Uživatelské jméno
 _portal.menu.languagedropdownlist=Jazyk
+_portal.ui.message.actions=Výběr akcí
 _portal.ui.message.less=Méně
 _portal.ui.message.more=Více
 _portal.ui.message.noscript=Pro optimální práci s touto webovou stránkou musíte aktivovat JavaScript
+_portal.ui.message.relatedcontent=Příbuzný obsah
 _portal.ui.message.success.search.saved=Výsledky vyhledávání uloženy
 _portal.ui.message.usertags=Uživatelské tagy
 _portal.ui.messages.items=Položky
@@ -170,10 +169,11 @@ _portal.ui.navigation.matchesfor=Matches for
 _portal.ui.navigation.next=Následující
 _portal.ui.navigation.of=Z
 _portal.ui.navigation.page=Strana
+_portal.ui.navigation.results=Výsledky
 _portal.ui.notification.error=Chyba
+_portal.ui.notification.failure.search.saved=Chyba ukládání výsledků vyhledávání
 _portal.ui.notification.noitemsfound=Nic nenalezeno
 _portal.ui.reset.searchbox=Vymaž
-_portal.ui.results=Výsledky
 _portal.ui.viewingrelateditems=Příbuzný materiál
 _register-request.emailalreadyregistered=Tato e-mailová adresa je již zaregistrována
 _register.email.has.been.sent=E-mail byl zaslán na následující adresu
@@ -204,6 +204,7 @@ _search.boolean.or=NEBO
 _search.field.any.field=Jakékoli pole
 _search.field.creator=Tvůrce
 _search.field.date=Datum
+_search.field.description=Popis
 _search.field.provider=Poskytovatel
 _search.field.subject=Předmět
 _search.field.title=Název
@@ -273,4 +274,3 @@ _unused_portal.ui.message.view.as.xml=Zobraz jako XML
 _unused_portal.ui.message.view.with.labels=Zobraz s popisky
 _unused_portal.ui.message.view.without.labels=Zobraz bez popisků
 _unused_portal.ui.message.you.have.search.for=Hledal/a jsi
-_unused_validation.username.in.use=Toto uživatelské jméno je již obsazeno. Vyber si jiné
