--- a/portal/src/main/resources/i18n/messages_da.properties
+++ b/portal/src/main/resources/i18n/messages_da.properties
@@ -1,3 +1,4 @@
+_action.OpenInNewWindow=Åbn i nyt vindue
 _action.add.annotation=null
 _action.add.tag=Tilføj et nøgleord
 _action.advanced.search=Avanceret søgning
@@ -16,9 +17,7 @@ _action.search=Søg
 _action.see.all.related.items=Se alle lignende referencer
 _action.send=Send
 _action.share.with.friend=Del med en ven
-_action.videos=Videoer
 _action.view.in.original.context=Se i den oprindelige sammenhæng
-_actionOpenInNewWindow=Åbn i nyt vindue
 _facet.by.collection=null
 _facet.by.country=Efter land
 _facet.by.date=Efter årstal
@@ -27,11 +26,6 @@ _facet.by.provider=Efter leverandør
 _facet.by.type=Efter type
 _facet.by.user.tag=Efter andre brugeres nøgleord
 _facet.by.year=null
-_failure.search.saved=Gem søgning mislykkedes
-_header.actions=Handlinger
-_header.relatedcontent=Lignende indhold
-_inc_result_table_full.description=Beskrivelse
-_language_select.italian=Italiensk
 _locale.AL=Albanien
 _locale.AM=Armenien
 _locale.AT=Østrig
@@ -86,6 +80,7 @@ _locale.fr=Fransk
 _locale.hr=Kroatisk
 _locale.hu=Ungarsk
 _locale.is=Islandsk
+_locale.it=Italiensk
 _locale.lb=Luxembourgsk
 _locale.lt=Litauisk
 _locale.lv=Lettisk
@@ -139,6 +134,7 @@ _metadata.type.images=Billeder
 _metadata.type.sounds=Lyd
 _metadata.type.texts=Tekster
 _metadata.type.video=Video
+_metadata.type.videos=Videoer
 _mine.date.saved=Årstal gemt
 _mine.delete=Slet
 _mine.email.address=E-mail-adresse
@@ -158,11 +154,14 @@ _mine.saved.searches=Gemte søgninger
 _mine.saved.tags=Gemte nøgleord
 _mine.user.information=Brugerinformation
 _mine.user.registration.notification.succeed=Du er nu registreret
+_mine.user.validation.username.in.use=Vælg et andet brugernavn
 _mine.username=Brugernavn
 _portal.menu.languagedropdownlist=Sprog
+_portal.ui.message.actions=Handlinger
 _portal.ui.message.less=Mindre
 _portal.ui.message.more=Mere
 _portal.ui.message.noscript=FOr optimal brug af dette website skal du have installeret JavaScript
+_portal.ui.message.relatedcontent=Lignende indhold
 _portal.ui.message.success.search.saved=Søgning gemt
 _portal.ui.message.usertags=Nøgleord tilføjet af brugere
 _portal.ui.messages.items=Genstande
@@ -170,10 +169,11 @@ _portal.ui.navigation.matchesfor=Følgende passede til
 _portal.ui.navigation.next=Næste
 _portal.ui.navigation.of=af
 _portal.ui.navigation.page=Side
+_portal.ui.navigation.results=Resultater
 _portal.ui.notification.error=Fejl
+_portal.ui.notification.failure.search.saved=Gem søgning mislykkedes
 _portal.ui.notification.noitemsfound=Der blev ikke fundet nogen referencer
 _portal.ui.reset.searchbox=Nulstil
-_portal.ui.results=Resultater
 _portal.ui.viewingrelateditems=Se lignende referencer
 _register-request.emailalreadyregistered=Denne e-mail er allerede registreret
 _register.email.has.been.sent=Der er afsendt en e-mail til adressen
@@ -204,6 +204,7 @@ _search.boolean.or=eller
 _search.field.any.field=Alle felter
 _search.field.creator=Kunstner
 _search.field.date=Årstal
+_search.field.description=Beskrivelse
 _search.field.provider=Leverandør
 _search.field.subject=Emne
 _search.field.title=Titel
@@ -273,4 +274,3 @@ _unused_portal.ui.message.view.as.xml=Vis som XML
 _unused_portal.ui.message.view.with.labels=Vis med feltnavne
 _unused_portal.ui.message.view.without.labels=Vis uden feltnavne
 _unused_portal.ui.message.you.have.search.for=Du søgte efter
-_unused_validation.username.in.use=Vælg et andet brugernavn
