--- a/portal/src/main/resources/i18n/messages_de.properties
+++ b/portal/src/main/resources/i18n/messages_de.properties
@@ -1,3 +1,4 @@
+_action.OpenInNewWindow=In neuem Fenster öffnen
 _action.add.annotation=Annotation hinzufügen
 _action.add.tag=Tag hinzufügen
 _action.advanced.search=Erweiterte Suche
@@ -16,9 +17,7 @@ _action.search=Suche
 _action.see.all.related.items=Alle ähnlichen Objekte anschauen
 _action.send=Senden
 _action.share.with.friend=An einen Freund schicken
-_action.videos=Videos
 _action.view.in.original.context=Im Originalzusammenhang ansehen
-_actionOpenInNewWindow=In neuem Fenster öffnen
 _facet.by.collection=null
 _facet.by.country=nach Land
 _facet.by.date=nach Datum
@@ -27,11 +26,6 @@ _facet.by.provider=nach Anbieter
 _facet.by.type=nach Typ
 _facet.by.user.tag=nach Nutzertag
 _facet.by.year=null
-_failure.search.saved=Speichern der Suche fehlgeschlagen
-_header.actions=Aktionen
-_header.relatedcontent=Ähnlicher Inhalt
-_inc_result_table_full.description=Beschreibung
-_language_select.italian=italienisch
 _locale.AL=Albanien
 _locale.AM=Armenien
 _locale.AT=Österreich
@@ -86,6 +80,7 @@ _locale.fr=französisch
 _locale.hr=kroatisch
 _locale.hu=ungarisch
 _locale.is=isländisch
+_locale.it=italienisch
 _locale.lb=luxemburgisch
 _locale.lt=litauisch
 _locale.lv=lettisch
@@ -139,6 +134,7 @@ _metadata.type.images=Bilder
 _metadata.type.sounds=Töne
 _metadata.type.texts=Texte
 _metadata.type.video=Video
+_metadata.type.videos=Videos
 _mine.date.saved=Datum gespeichert
 _mine.delete=Löschen
 _mine.email.address=E-Mailadresse
@@ -158,11 +154,14 @@ _mine.saved.searches=Gespeicherte Suchanfragen
 _mine.saved.tags=Gespeicherte Tags
 _mine.user.information=Nutzerinformation
 _mine.user.registration.notification.succeed=Sie haben sich erfolgreich registriert.
+_mine.user.validation.username.in.use=ist schon vergeben. Bitte wählen Sie einen anderen Benutzernamen.
 _mine.username=Nutzername
 _portal.menu.languagedropdownlist=Sprache
+_portal.ui.message.actions=Aktionen
 _portal.ui.message.less=Weniger
 _portal.ui.message.more=Mehr
 _portal.ui.message.noscript=Um diese Seite optimal nutzen zu können, müssen Sie Javascript aktiviert haben
+_portal.ui.message.relatedcontent=Ähnlicher Inhalt
 _portal.ui.message.success.search.saved=Suche gespeichert
 _portal.ui.message.usertags=Nutzertags
 _portal.ui.messages.items=Objekte
@@ -170,10 +169,11 @@ _portal.ui.navigation.matchesfor=Für
 _portal.ui.navigation.next=Nächste
 _portal.ui.navigation.of=von
 _portal.ui.navigation.page=Seite
+_portal.ui.navigation.results=Ergebnisse
 _portal.ui.notification.error=Fehler
+_portal.ui.notification.failure.search.saved=Speichern der Suche fehlgeschlagen
 _portal.ui.notification.noitemsfound=Keine Objekte gefunden
 _portal.ui.reset.searchbox=Reset
-_portal.ui.results=Ergebnisse
 _portal.ui.viewingrelateditems=Sie betrachten ähnliche Objekte
 _register-request.emailalreadyregistered=Diese E-Mail-Adresse ist bereits registriert.
 _register.email.has.been.sent=Eine E-Mail wurde an folgende Adresse gesendet
@@ -204,6 +204,7 @@ _search.boolean.or=oder
 _search.field.any.field=Alle Felder
 _search.field.creator=Urheber
 _search.field.date=Datum
+_search.field.description=Beschreibung
 _search.field.provider=Anbieter
 _search.field.subject=Thema
 _search.field.title=Titel
@@ -273,4 +274,3 @@ _unused_portal.ui.message.view.as.xml=In XML ansehen
 _unused_portal.ui.message.view.with.labels=Mit Labels ansehen
 _unused_portal.ui.message.view.without.labels=Ohne Labels ansehen
 _unused_portal.ui.message.you.have.search.for=Sie haben nach...gesucht
-_unused_validation.username.in.use=ist schon vergeben. Bitte wählen Sie einen anderen Benutzernamen.
