--- a/portal/src/main/resources/i18n/messages_el.properties
+++ b/portal/src/main/resources/i18n/messages_el.properties
@@ -1,3 +1,4 @@
+_action.OpenInNewWindow=Ανοίγει νέο παράθυρο
 _action.add.annotation=null
 _action.add.tag=Προσθήκη ετικέτας
 _action.advanced.search=Σύνθετη έρευνα
@@ -16,9 +17,7 @@ _action.search=Έρευνα
 _action.see.all.related.items=Δείτε όλα τα σχετικά τεκμήρια
 _action.send=Αποστολή
 _action.share.with.friend=Μοιραστείτε το με ένα φίλο
-_action.videos=Βίντεο
 _action.view.in.original.context=Εμφάνιση στα αρχικά συμφραζόμενα
-_actionOpenInNewWindow=Ανοίγει νέο παράθυρο
 _facet.by.collection=null
 _facet.by.country=Κατά χώρα
 _facet.by.date=Κατά ημερομηνία
@@ -27,11 +26,6 @@ _facet.by.provider=Κατά πάροχο
 _facet.by.type=Κατά τύπο
 _facet.by.user.tag=Κατά ετικέτα χρήστη
 _facet.by.year=null
-_failure.search.saved=Αποτυχία αποθήκευσης της έρευνας
-_header.actions=Δράσεις
-_header.relatedcontent=Σχετικό περιεχόμενο
-_inc_result_table_full.description=Περιγραφή
-_language_select.italian=Ιταλικά (ita)
 _locale.AL=Αλβανία
 _locale.AM=Αρμενία
 _locale.AT=Αυστρία
@@ -86,6 +80,7 @@ _locale.fr=Γαλλικά (fre)
 _locale.hr=Κροατικά (hrv)
 _locale.hu=Ουγγρικά (hun)
 _locale.is=Ισλανδικά (ice)
+_locale.it=Ιταλικά (ita)
 _locale.lb=Λουξεμβουργιανά (ltz)
 _locale.lt=Λιθουανικά (lit)
 _locale.lv=Λετονικά (lav)
@@ -139,6 +134,7 @@ _metadata.type.images=Εικόνες
 _metadata.type.sounds=Ήχοι
 _metadata.type.texts=Κείμενα
 _metadata.type.video=Βίντεο
+_metadata.type.videos=Βίντεο
 _mine.date.saved=Η ημερομηνία αποθηκεύτηκε
 _mine.delete=Διαγραφή
 _mine.email.address=Διεύθυνση ηλ-ταχυδρομείου
@@ -158,11 +154,14 @@ _mine.saved.searches=Αποθηκευμένες έρευνες
 _mine.saved.tags=Αποθηκευμένες ετικέτες
 _mine.user.information=Πληροφορίες για τον χρήστη
 _mine.user.registration.notification.succeed=Η εγγραφή σας ήταν επιτυχής
+_mine.user.validation.username.in.use=χρησιμοποιείται. Παρακαλούμε να επιλέξετε άλλο όνομα χρήστη
 _mine.username=Όνομα χρήστη
 _portal.menu.languagedropdownlist=Γλώσσα
+_portal.ui.message.actions=Δράσεις
 _portal.ui.message.less=Λιγότερα
 _portal.ui.message.more=Περισσότερα
 _portal.ui.message.noscript=Για να κάνετε τη βέλτιστη χρήση αυτού του δικτυακού τόπου, χρειάζεται να έχετε ενεργοποιήσει το JavaScript
+_portal.ui.message.relatedcontent=Σχετικό περιεχόμενο
 _portal.ui.message.success.search.saved=Η έρευνα αποθηκεύτηκε
 _portal.ui.message.usertags=Ετικέτες χρηστών
 _portal.ui.messages.items=Τεκμήρια
@@ -170,10 +169,11 @@ _portal.ui.navigation.matchesfor=Συσχετίζεται με
 _portal.ui.navigation.next=Επόμενο
 _portal.ui.navigation.of=του
 _portal.ui.navigation.page=Σελίδα
+_portal.ui.navigation.results=Αποτελέσματα
 _portal.ui.notification.error=Σφάλμα
+_portal.ui.notification.failure.search.saved=Αποτυχία αποθήκευσης της έρευνας
 _portal.ui.notification.noitemsfound=Δεν βρέθηκαν τεκμήρια
 _portal.ui.reset.searchbox=Επανεκκίνηση
-_portal.ui.results=Αποτελέσματα
 _portal.ui.viewingrelateditems=Βλέπετε σχετικά τεκμήρια
 _register-request.emailalreadyregistered=Αυτή η διεύθυνση ηλ-ταχυδρομείου έχει ήδη καταγραφτεί
 _register.email.has.been.sent=Ένα μήνυμα ηλ-ταχυδρομείου έχει αποσταλεί στην ακόλουθη διεύθυνση
@@ -204,6 +204,7 @@ _search.boolean.or=ή
 _search.field.any.field=Οποιοδήποτε πεδίο
 _search.field.creator=Δημιουργός
 _search.field.date=Ημερομηνία
+_search.field.description=Περιγραφή
 _search.field.provider=Πάροχος
 _search.field.subject=Θέμα
 _search.field.title=Τίτλος
@@ -273,4 +274,3 @@ _unused_portal.ui.message.view.as.xml=Εμφάνιση ως XML
 _unused_portal.ui.message.view.with.labels=Εμφάνιση με τίτλους
 _unused_portal.ui.message.view.without.labels=Εμφάνιση χωρίς τίτλους
 _unused_portal.ui.message.you.have.search.for=Έχετε αναζητήσει για
-_unused_validation.username.in.use=χρησιμοποιείται. Παρακαλούμε να επιλέξετε άλλο όνομα χρήστη
