--- a/portal/src/main/resources/i18n/messages_en.properties
+++ b/portal/src/main/resources/i18n/messages_en.properties
@@ -1,3 +1,4 @@
+_action.OpenInNewWindow=Opens in a new window
 _action.add.annotation=Add annotation
 _action.add.tag=Add a tag
 _action.advanced.search=Advanced search
@@ -6,6 +7,7 @@ _action.alt.more.info=Click for more information
 _action.alt.next.page=Click here for next page of results
 _action.alt.previous.page=click here for previous page of results
 _action.alt.table.view=Table view
+_action.form.submit=Submit
 _action.personal.page=My Personal Page
 _action.previous=Previous
 _action.refine.your.search=Refine your search
@@ -16,9 +18,8 @@ _action.search=Search
 _action.see.all.related.items=See all related items
 _action.send=Send
 _action.share.with.friend=Share with a friend
-_action.videos=Videos
 _action.view.in.original.context=View in original context
-_actionOpenInNewWindow=Opens in a new window
+_actions.search.order.by=Order by
 _cms.administration.images=Image administration
 _cms.administration.pages=Page administration
 _cms.administration.title=Administration
@@ -63,7 +64,6 @@ _cms.user.role.super=Super user
 _cms.version.approve=Approve this version
 _cms.version.approve.explain=By approving a version you permanently delete all the other versions of the page
 _cms.versions=Versions
-_delving-macros.search.order.by=Order by
 _facet.by.collection=By collection
 _facet.by.country=By country
 _facet.by.date=By date
@@ -72,11 +72,6 @@ _facet.by.provider=By provider
 _facet.by.type=By type
 _facet.by.user.tag=By user tag
 _facet.by.year=null
-_failure.search.saved=Saving search failed
-_header.actions=Actions
-_header.relatedcontent=Related content
-_inc_result_table_full.description=Description
-_language_select.italian=Italian (ita)
 _locale.AL=Albania
 _locale.AM=Armenia
 _locale.AT=Austria
@@ -131,6 +126,7 @@ _locale.fr=French (fre)
 _locale.hr=Croatian (hrv)
 _locale.hu=Hungarian (hun)
 _locale.is=Icelandic (ice)
+_locale.it=Italian (ita)
 _locale.lb=Luxemburgish (ltz)
 _locale.lt=Lithuanian (lit)
 _locale.lv=Latvian (lav)
@@ -193,6 +189,7 @@ _metadata.type.images=Images
 _metadata.type.sounds=Sounds
 _metadata.type.texts=Texts
 _metadata.type.video=Video
+_metadata.type.videos=Videos
 _mine.date.saved=Date saved
 _mine.delete=Delete
 _mine.email.address=Email address
@@ -220,14 +217,16 @@ _mine.user.validation.password.long=Password is too long
 _mine.user.validation.password.mismatch=Passwords do not match
 _mine.user.validation.password.tooshort=Password is too short
 _mine.user.validation.username.exists=Username already exists
+_mine.user.validation.username.in.use=is in use. Please choose another username
 _mine.user.validation.username.invalid.chars=Username may only contain letters, digits, spaces and underscores
 _mine.user.validation.username.long=Username is too long
 _mine.username=Username
-_portal.form.submit=Submit
 _portal.menu.languagedropdownlist=Language
+_portal.ui.message.actions=Actions
 _portal.ui.message.less=Less
 _portal.ui.message.more=More
 _portal.ui.message.noscript=To make optimal use of this website you need to have JavaScript activated
+_portal.ui.message.relatedcontent=Related content
 _portal.ui.message.success.search.saved=Search saved
 _portal.ui.message.usertags=User tags
 _portal.ui.messages.items=Items
@@ -235,10 +234,11 @@ _portal.ui.navigation.matchesfor=Matches for
 _portal.ui.navigation.next=Next
 _portal.ui.navigation.of=of
 _portal.ui.navigation.page=Page
+_portal.ui.navigation.results=Results
 _portal.ui.notification.error=Error
+_portal.ui.notification.failure.search.saved=Saving search failed
 _portal.ui.notification.noitemsfound=No items found
 _portal.ui.reset.searchbox=Reset
-_portal.ui.results=Results
 _portal.ui.viewingrelateditems=You are viewing related items
 _register-request.emailalreadyregistered=This email is already registered
 _register.email.has.been.sent=An email has been sent to the following address
@@ -269,6 +269,7 @@ _search.boolean.or=or
 _search.field.any.field=Any field
 _search.field.creator=Creator
 _search.field.date=Date
+_search.field.description=Description
 _search.field.provider=Provider
 _search.field.subject=Subject
 _search.field.title=Title
@@ -338,4 +339,3 @@ _unused_portal.ui.message.view.as.xml=View as XML
 _unused_portal.ui.message.view.with.labels=View with labels
 _unused_portal.ui.message.view.without.labels=View without labels
 _unused_portal.ui.message.you.have.search.for=You have searched for
-_unused_validation.username.in.use=is in use. Please choose another username
