--- a/portal/src/main/resources/i18n/messages_es.properties
+++ b/portal/src/main/resources/i18n/messages_es.properties
@@ -1,3 +1,4 @@
+_action.OpenInNewWindow=Abrir en una nueva ventana
 _action.add.annotation=null
 _action.add.tag=Añadir etiqueta
 _action.advanced.search=Búsqueda avanzada
@@ -16,9 +17,7 @@ _action.search=Búsqueda
 _action.see.all.related.items=Ver todos los elementos relacionados
 _action.send=Enviado
 _action.share.with.friend=Compartir con un amigo
-_action.videos=Vídeos
 _action.view.in.original.context=Visualizar en el contexto original
-_actionOpenInNewWindow=Abrir en una nueva ventana
 _facet.by.collection=null
 _facet.by.country=Por país
 _facet.by.date=Por fecha
@@ -27,11 +26,6 @@ _facet.by.provider=Por proveedor
 _facet.by.type=Por tipo
 _facet.by.user.tag=Por etiqueta de usuario
 _facet.by.year=null
-_failure.search.saved=Fallo en la grabación de la búsqueda
-_header.actions=Acciones
-_header.relatedcontent=Contenido relacionado
-_inc_result_table_full.description=Descripción
-_language_select.italian=Italiano (ita)
 _locale.AL=Albania
 _locale.AM=Armenia
 _locale.AT=Austria
@@ -86,6 +80,7 @@ _locale.fr=Francés (fre)
 _locale.hr=Croacia (hrv)
 _locale.hu=Húngaro (hun)
 _locale.is=Islandés (ice)
+_locale.it=Italiano (ita)
 _locale.lb=Luxemburgués (ltz)
 _locale.lt=Lituano (lit)
 _locale.lv=Letón (lav)
@@ -139,6 +134,7 @@ _metadata.type.images=Imágenes
 _metadata.type.sounds=Sonidos
 _metadata.type.texts=Textos
 _metadata.type.video=Vídeo
+_metadata.type.videos=Vídeos
 _mine.date.saved=Fecha guardada
 _mine.delete=Borrar
 _mine.email.address=Dirección de correo electrónico
@@ -158,11 +154,14 @@ _mine.saved.searches=Búsquedas guardadas
 _mine.saved.tags=Etiquetas guardadas
 _mine.user.information=Información de usuario
 _mine.user.registration.notification.succeed=Se ha registrado corecctamente
+_mine.user.validation.username.in.use=ya está en uso. Por favor, elija otro nombre de usuario
 _mine.username=Nombre de usuario
 _portal.menu.languagedropdownlist=Lengua
+_portal.ui.message.actions=Acciones
 _portal.ui.message.less=Menos
 _portal.ui.message.more=Más
 _portal.ui.message.noscript=Para disfrutrar de un óptimo acceso a esta web, necesita tener activado el JavaScript
+_portal.ui.message.relatedcontent=Contenido relacionado
 _portal.ui.message.success.search.saved=Búsqueda guardada
 _portal.ui.message.usertags=Etiquetas de usuario
 _portal.ui.messages.items=Ejemplares
@@ -170,10 +169,11 @@ _portal.ui.navigation.matchesfor=Concuerda con
 _portal.ui.navigation.next=Siguiente
 _portal.ui.navigation.of=de
 _portal.ui.navigation.page=Página
+_portal.ui.navigation.results=Resultados
 _portal.ui.notification.error=Error
+_portal.ui.notification.failure.search.saved=Fallo en la grabación de la búsqueda
 _portal.ui.notification.noitemsfound=No se encuentran resultados
 _portal.ui.reset.searchbox=reiniciar
-_portal.ui.results=Resultados
 _portal.ui.viewingrelateditems=Se muestran los elementos relacionados
 _register-request.emailalreadyregistered=Esta dirección de correo ya está registrada
 _register.email.has.been.sent=Se ha enviado un correo electrónico a la siguiente dirección
@@ -204,6 +204,7 @@ _search.boolean.or=O
 _search.field.any.field=Cualquier campo
 _search.field.creator=Creador
 _search.field.date=Fecha
+_search.field.description=Descripción
 _search.field.provider=Proveedor
 _search.field.subject=Materia
 _search.field.title=Título
@@ -273,4 +274,3 @@ _unused_portal.ui.message.view.as.xml=Vista en XML
 _unused_portal.ui.message.view.with.labels=Vista con etiqueta
 _unused_portal.ui.message.view.without.labels=Vista sin etiquetas
 _unused_portal.ui.message.you.have.search.for=Usted ha buscado por
-_unused_validation.username.in.use=ya está en uso. Por favor, elija otro nombre de usuario
