--- a/portal/src/main/resources/i18n/messages_et.properties
+++ b/portal/src/main/resources/i18n/messages_et.properties
@@ -1,3 +1,4 @@
+_action.OpenInNewWindow=Avaneb uues aknas
 _action.add.annotation=null
 _action.add.tag=Märksõna lisamine
 _action.advanced.search=Kompleksotsing
@@ -16,9 +17,7 @@ _action.search=Otsi
 _action.see.all.related.items=Vaata kõiki sarnaseid objekte
 _action.send=Saada
 _action.share.with.friend=Jagamine sõbraga
-_action.videos=Videod
 _action.view.in.original.context=Objekti vaatamine tema algses asukohas
-_actionOpenInNewWindow=Avaneb uues aknas
 _facet.by.collection=null
 _facet.by.country=Riikide järgi
 _facet.by.date=Ajaliselt
@@ -27,11 +26,6 @@ _facet.by.provider=Materjali valdaja järgi
 _facet.by.type=Tüübi järgi
 _facet.by.user.tag=Kasutajate lisatud märksõnade järgi
 _facet.by.year=null
-_failure.search.saved=Päringu salvestamine ebaõnnestus
-_header.actions=Tegevused
-_header.relatedcontent=Sarnased objektid
-_inc_result_table_full.description=Kirjeldus
-_language_select.italian=itaalia (ita)
 _locale.AL=Albaania
 _locale.AM=Armeenia
 _locale.AT=Austria
@@ -86,6 +80,7 @@ _locale.fr=prantsuse (fre)
 _locale.hr=horvaadi (hrv)
 _locale.hu=ungari (hun)
 _locale.is=islandi (ice)
+_locale.it=itaalia (ita)
 _locale.lb=letseburgi (ltz)
 _locale.lt=leedu (lit)
 _locale.lv=läti (lav)
@@ -139,6 +134,7 @@ _metadata.type.images=Pildid
 _metadata.type.sounds=Helifailid
 _metadata.type.texts=Tekstid
 _metadata.type.video=Video
+_metadata.type.videos=Videod
 _mine.date.saved=Kuupäev salvestatud
 _mine.delete=Kustuta
 _mine.email.address=E-posti aadress
@@ -158,11 +154,14 @@ _mine.saved.searches=Salvestatud päringud
 _mine.saved.tags=Salvestatud märksõnad
 _mine.user.information=Kasutajaandmed
 _mine.user.registration.notification.succeed=Registreerumine õnnestus
+_mine.user.validation.username.in.use=on juba kasutusel. Palun valige teistsugune kasutajanimi
 _mine.username=Kasutajanimi
 _portal.menu.languagedropdownlist=Keel
+_portal.ui.message.actions=Tegevused
 _portal.ui.message.less=Vähem
 _portal.ui.message.more=Rohkem
 _portal.ui.message.noscript=Selle veebilehe optimaalseks kasutamiseks on vaja aktiveerida JavaScript
+_portal.ui.message.relatedcontent=Sarnased objektid
 _portal.ui.message.success.search.saved=Päring on salvestatud
 _portal.ui.message.usertags=Kasutajate märksõnad
 _portal.ui.messages.items=Objektid
@@ -170,10 +169,11 @@ _portal.ui.navigation.matchesfor=Päring:
 _portal.ui.navigation.next=Järgmine
 _portal.ui.navigation.of=of
 _portal.ui.navigation.page=Lehekülg
+_portal.ui.navigation.results=Tulemused
 _portal.ui.notification.error=Viga
+_portal.ui.notification.failure.search.saved=Päringu salvestamine ebaõnnestus
 _portal.ui.notification.noitemsfound=Tulemusi ei leitud
 _portal.ui.reset.searchbox=Alusta uuesti
-_portal.ui.results=Tulemused
 _portal.ui.viewingrelateditems=Seotud objektide vaatamine
 _register-request.emailalreadyregistered=See e-posti aadress on juba registreeritud
 _register.email.has.been.sent=E-kiri on saadetud järgmisele aadressile
@@ -204,6 +204,7 @@ _search.boolean.or=või
 _search.field.any.field=Mistahes väli
 _search.field.creator=Autor
 _search.field.date=Kuupäev
+_search.field.description=Kirjeldus
 _search.field.provider=Objekti valdaja
 _search.field.subject=Teema
 _search.field.title=Pealkiri
@@ -273,4 +274,3 @@ _unused_portal.ui.message.view.as.xml=Vaata XML-vormingus
 _unused_portal.ui.message.view.with.labels=Vaata koos siltidega
 _unused_portal.ui.message.view.without.labels=Vaata ilma siltideta
 _unused_portal.ui.message.you.have.search.for=Otsiti
-_unused_validation.username.in.use=on juba kasutusel. Palun valige teistsugune kasutajanimi
