--- a/portal/src/main/resources/i18n/messages_fi.properties
+++ b/portal/src/main/resources/i18n/messages_fi.properties
@@ -1,3 +1,4 @@
+_action.OpenInNewWindow=Avaa uudessa ikkunassa
 _action.add.annotation=null
 _action.add.tag=Lisää tagi
 _action.advanced.search=Tarkennettu haku
@@ -16,9 +17,7 @@ _action.search=Haku
 _action.see.all.related.items=Katso kaikki tähän liittyvät kohteet
 _action.send=Lähetä
 _action.share.with.friend=Jaa ystävälle
-_action.videos=Videot
 _action.view.in.original.context=Tarkastele alkuperäisessä yhteydessä
-_actionOpenInNewWindow=Avaa uudessa ikkunassa
 _facet.by.collection=null
 _facet.by.country=Maan mukaan
 _facet.by.date=Aikamääreen mukaan
@@ -27,11 +26,6 @@ _facet.by.provider=Julkaisijan mukaan
 _facet.by.type=Lajin mukaan
 _facet.by.user.tag=Käyttäjän tagin (vapaasti määritelty avainsana) mukaan
 _facet.by.year=null
-_failure.search.saved=Haun tallentaminen epäonnistui
-_header.actions=Tapahtumat
-_header.relatedcontent=Tähän liittyvä sisältö
-_inc_result_table_full.description=Kuvaus
-_language_select.italian=italia (ita)
 _locale.AL=Albania
 _locale.AM=Armenia
 _locale.AT=Itävalta
@@ -86,6 +80,7 @@ _locale.fr=ranska (fre)
 _locale.hr=kroatia (hrv)
 _locale.hu=unkari (hun)
 _locale.is=islanti (ice)
+_locale.it=italia (ita)
 _locale.lb=luxemburg (ltz)
 _locale.lt=liettua (lit)
 _locale.lv=Latvia (lav)
@@ -139,6 +134,7 @@ _metadata.type.images=Kuvat
 _metadata.type.sounds=Äänitteet
 _metadata.type.texts=Tekstit
 _metadata.type.video=Video
+_metadata.type.videos=Videot
 _mine.date.saved=Ajankohta tallennettu
 _mine.delete=Hylkää
 _mine.email.address=Sähköpostiosoite
@@ -158,11 +154,14 @@ _mine.saved.searches=Tallennetut haut
 _mine.saved.tags=Tallennetut tagit
 _mine.user.information=Tiedot käyttäjästä
 _mine.user.registration.notification.succeed=Rekisteröitymisesi onnistui
+_mine.user.validation.username.in.use=on käytössä. Valitse toinen käyttäjätunnus
 _mine.username=Käyttäjätunnus
 _portal.menu.languagedropdownlist=Kieli
+_portal.ui.message.actions=Tapahtumat
 _portal.ui.message.less=Vähemmän
 _portal.ui.message.more=Enemmän
 _portal.ui.message.noscript=Saadaksesi tästä sivustosta parhaan mahdollisen hyödyn sinulla täytyy olla käytössä JavaScript
+_portal.ui.message.relatedcontent=Tähän liittyvä sisältö
 _portal.ui.message.success.search.saved=Haku tallennettu
 _portal.ui.message.usertags=Käyttäjätagit (vapaasti määritellyt avainsanat)
 _portal.ui.messages.items=Kohteet
@@ -170,10 +169,11 @@ _portal.ui.navigation.matchesfor=Osumia
 _portal.ui.navigation.next=Seuraava
 _portal.ui.navigation.of=mistä:
 _portal.ui.navigation.page=Sivu
+_portal.ui.navigation.results=Tulokset
 _portal.ui.notification.error=Virhe
+_portal.ui.notification.failure.search.saved=Haun tallentaminen epäonnistui
 _portal.ui.notification.noitemsfound=Kohteita ei löytynyt
 _portal.ui.reset.searchbox=Päivitä
-_portal.ui.results=Tulokset
 _portal.ui.viewingrelateditems=Muita tähän liittyviä kohteita
 _register-request.emailalreadyregistered=Tämä sähköposti on jo rekisteröity
 _register.email.has.been.sent=Sähköposti on lähetetty osoitteeseen
@@ -204,6 +204,7 @@ _search.boolean.or=tai
 _search.field.any.field=Kaikki kentät
 _search.field.creator=Tekijä
 _search.field.date=Aika
+_search.field.description=Kuvaus
 _search.field.provider=Julkaisija
 _search.field.subject=Aihe
 _search.field.title=Nimi
@@ -273,4 +274,3 @@ _unused_portal.ui.message.view.as.xml=Tarkastele XML-muodossa
 _unused_portal.ui.message.view.with.labels=Otsikkonäyttö
 _unused_portal.ui.message.view.without.labels=Näyttö ilman otsikkoja
 _unused_portal.ui.message.you.have.search.for=Olet tehnyt haun:
-_unused_validation.username.in.use=on käytössä. Valitse toinen käyttäjätunnus
