--- a/portal/src/main/resources/i18n/messages_fr.properties
+++ b/portal/src/main/resources/i18n/messages_fr.properties
@@ -1,3 +1,4 @@
+_action.OpenInNewWindow=Ouvrir dans une nouvelle fenêtre
 _action.add.annotation=null
 _action.add.tag=Ajouter une étiquette
 _action.advanced.search=Recherche avancée
@@ -16,9 +17,7 @@ _action.search=Rechercher
 _action.see.all.related.items=Voir tous les objets en relation
 _action.send=Envoyer
 _action.share.with.friend=Partager avec un ami
-_action.videos=Videos
 _action.view.in.original.context=Voir dans le contexte d'origine
-_actionOpenInNewWindow=Ouvrir dans une nouvelle fenêtre
 _facet.by.collection=null
 _facet.by.country=Par pays
 _facet.by.date=Par date
@@ -27,11 +26,6 @@ _facet.by.provider=Par fournisseur
 _facet.by.type=Par type
 _facet.by.user.tag=Par étiquette d'utilisateur
 _facet.by.year=null
-_failure.search.saved=Sauvegarde de la recherche échouée
-_header.actions=Actions
-_header.relatedcontent=Contenu en relation
-_inc_result_table_full.description=Description
-_language_select.italian=Italien (ita)
 _locale.AL=Albanie
 _locale.AM=Arménie
 _locale.AT=Autriche
@@ -86,6 +80,7 @@ _locale.fr=Français (fre)
 _locale.hr=Croate (hrv)
 _locale.hu=Hongrois (hun)
 _locale.is=Islandais (ice)
+_locale.it=Italien (ita)
 _locale.lb=Luxembourgeois (ltz)
 _locale.lt=Lituanien (lit)
 _locale.lv=Letton (lav)
@@ -139,6 +134,7 @@ _metadata.type.images=Images
 _metadata.type.sounds=Sons
 _metadata.type.texts=Textes
 _metadata.type.video=Video
+_metadata.type.videos=Videos
 _mine.date.saved=Date sauvegardée
 _mine.delete=Détruire
 _mine.email.address=Adresse mél.
@@ -158,11 +154,14 @@ _mine.saved.searches=Recherches sauvegardées
 _mine.saved.tags=Etiquettes sauvegardées
 _mine.user.information=Information pour l'utilisateur
 _mine.user.registration.notification.succeed=Vous êtes enregistré avec succès
+_mine.user.validation.username.in.use=déjà utilisé. Veuillez choisir un autre nom d'utilisateur
 _mine.username=Nom d'utilisateur
 _portal.menu.languagedropdownlist=Langue
+_portal.ui.message.actions=Actions
 _portal.ui.message.less=Moins
 _portal.ui.message.more=Plus
 _portal.ui.message.noscript=Pour avoir une utilisation optimale du site web, vous avez besoin d'activer Javascript
+_portal.ui.message.relatedcontent=Contenu en relation
 _portal.ui.message.success.search.saved=Recherche sauvegardée
 _portal.ui.message.usertags=Les étiquettes de l'utilisateur
 _portal.ui.messages.items=Objets
@@ -170,10 +169,11 @@ _portal.ui.navigation.matchesfor=Réponses pour
 _portal.ui.navigation.next=Suivant
 _portal.ui.navigation.of=de
 _portal.ui.navigation.page=Page
+_portal.ui.navigation.results=Résultats
 _portal.ui.notification.error=Erreur
+_portal.ui.notification.failure.search.saved=Sauvegarde de la recherche échouée
 _portal.ui.notification.noitemsfound=Pas d'objets trouvés
 _portal.ui.reset.searchbox=Réinitialiser
-_portal.ui.results=Résultats
 _portal.ui.viewingrelateditems=Visualiser les objets en relation
 _register-request.emailalreadyregistered=Cette adresse mél est déjà enregistrée
 _register.email.has.been.sent=Un mél. a été envoyé à l'adresse suivante
@@ -204,6 +204,7 @@ _search.boolean.or=ou
 _search.field.any.field=N'importe quel champ
 _search.field.creator=Createur
 _search.field.date=Date
+_search.field.description=Description
 _search.field.provider=Fournisseur
 _search.field.subject=Sujet
 _search.field.title=Titre
@@ -273,4 +274,3 @@ _unused_portal.ui.message.view.as.xml=Voir en XML
 _unused_portal.ui.message.view.with.labels=Voir avec les labels
 _unused_portal.ui.message.view.without.labels=Voir sans les labels
 _unused_portal.ui.message.you.have.search.for=Vous avez recherché sur
-_unused_validation.username.in.use=déjà utilisé. Veuillez choisir un autre nom d'utilisateur
