--- a/portal/src/main/resources/i18n/messages_ga.properties
+++ b/portal/src/main/resources/i18n/messages_ga.properties
@@ -1,3 +1,4 @@
+_action.OpenInNewWindow=Osclaíonn i bhfuinneog nua
 _action.add.annotation=null
 _action.add.tag=Cuir clib leis seo
 _action.advanced.search=Cuardach casta
@@ -16,9 +17,7 @@ _action.search=Cuardaigh
 _action.see.all.related.items=Féach ar na míreanna gaolmhara
 _action.send=Seol
 _action.share.with.friend=Roinn le cara
-_action.videos=Físeáin
 _action.view.in.original.context=Amharc sa chomhthécs bunaidh
-_actionOpenInNewWindow=Osclaíonn i bhfuinneog nua
 _facet.by.collection=null
 _facet.by.country=De réir tíre
 _facet.by.date=De réir dáta
@@ -27,11 +26,6 @@ _facet.by.provider=De réir soláthróra
 _facet.by.type=De réir sóirt
 _facet.by.user.tag=De réir clib úsáideora
 _facet.by.year=null
-_failure.search.saved=Sábháil cuardach teipthe
-_header.actions=Gníomhartha
-_header.relatedcontent=Ábhar gaolmhar
-_inc_result_table_full.description=Cur síos
-_language_select.italian=Iodáilis (ita)
 _locale.AL=An Albáin
 _locale.AM=An Airméin
 _locale.AT=An Ostair
@@ -86,6 +80,7 @@ _locale.fr=Fraincis(fre)
 _locale.hr=Cróitis (hrv)
 _locale.hu=Ungáiris (hun)
 _locale.is=Mórlainnis (ice)
+_locale.it=Iodáilis (ita)
 _locale.lb=Lucsambuirgis (ltz)
 _locale.lt=Liotuáinis (lit)
 _locale.lv=Laitvis (lav)
@@ -139,6 +134,7 @@ _metadata.type.images=Íomhánna
 _metadata.type.sounds=Fuaimeanna
 _metadata.type.texts=Téacsanna
 _metadata.type.video=Físeán
+_metadata.type.videos=Físeáin
 _mine.date.saved=Dáta sábháilte
 _mine.delete=Scrios
 _mine.email.address=Seoladh r-phoist
@@ -158,11 +154,14 @@ _mine.saved.searches=Cuardaigh shábháilte
 _mine.saved.tags=Clibeanna sábhailte
 _mine.user.information=Eolas úsáideora
 _mine.user.registration.notification.succeed=D'éirigh leat tú féin a chlárú
+_mine.user.validation.username.in.use=in úsáid. Roghnaigh ainm úsáideora eile le do thoil
 _mine.username=Ainm úsáideora
 _portal.menu.languagedropdownlist=Teanga
+_portal.ui.message.actions=Gníomhartha
 _portal.ui.message.less=Níos lú
 _portal.ui.message.more=Níos mó
 _portal.ui.message.noscript=To make optimal use of this website you need to have JavaScript activated
+_portal.ui.message.relatedcontent=Ábhar gaolmhar
 _portal.ui.message.success.search.saved=Cuardach sábháilte
 _portal.ui.message.usertags=Clibeanna úsáideora
 _portal.ui.messages.items=Míreanna
@@ -170,10 +169,11 @@ _portal.ui.navigation.matchesfor=Meaiteálacha do
 _portal.ui.navigation.next=Ar aghaidh
 _portal.ui.navigation.of=de
 _portal.ui.navigation.page=Leathanach
+_portal.ui.navigation.results=Torthaí
 _portal.ui.notification.error=Earráid
+_portal.ui.notification.failure.search.saved=Sábháil cuardach teipthe
 _portal.ui.notification.noitemsfound=Ní bhfuarthas aon mhíreanna
 _portal.ui.reset.searchbox=Athshocraigh
-_portal.ui.results=Torthaí
 _portal.ui.viewingrelateditems=Tá tú ag féachaint ar mhíreanna gaolmhara
 _register-request.emailalreadyregistered=Tá an r-phost seo cláraithe cheana
 _register.email.has.been.sent=Seoladh r-phost chuig an seoladh seo leanas
@@ -204,6 +204,7 @@ _search.boolean.or=nó
 _search.field.any.field=Réimse ar bith
 _search.field.creator=Cruthaitheoir
 _search.field.date=Dáta
+_search.field.description=Cur síos
 _search.field.provider=Soláthróir
 _search.field.subject=Ábhar
 _search.field.title=Teideal
@@ -273,4 +274,3 @@ _unused_portal.ui.message.view.as.xml=Amharc mar XML
 _unused_portal.ui.message.view.with.labels=Amharc le lipéid
 _unused_portal.ui.message.view.without.labels=Amharc gan lipéidd
 _unused_portal.ui.message.you.have.search.for=Chuardaigh tú
-_unused_validation.username.in.use=in úsáid. Roghnaigh ainm úsáideora eile le do thoil
