--- a/portal/src/main/resources/i18n/messages_hu.properties
+++ b/portal/src/main/resources/i18n/messages_hu.properties
@@ -1,3 +1,4 @@
+_action.OpenInNewWindow=Megnyitás új abalakban
 _action.add.annotation=null
 _action.add.tag=Címke hozzáadása
 _action.advanced.search=Összetett keresés
@@ -16,9 +17,7 @@ _action.search=Keresés
 _action.see.all.related.items=Az összes kapcsolódó elem megtekintése
 _action.send=Küldés
 _action.share.with.friend=Megosztás egy baráttal
-_action.videos=Videók
 _action.view.in.original.context=Eredeti kontextus
-_actionOpenInNewWindow=Megnyitás új abalakban
 _facet.by.collection=null
 _facet.by.country=Ország
 _facet.by.date=Dátum
@@ -27,11 +26,6 @@ _facet.by.provider=Szolgáltató
 _facet.by.type=Típus
 _facet.by.user.tag=Felhasználói címke
 _facet.by.year=null
-_failure.search.saved=A keresés mentése sikertelen.
-_header.actions=Műveletek
-_header.relatedcontent=Kapcsolódó tartalom
-_inc_result_table_full.description=Leírás
-_language_select.italian=olasz
 _locale.AL=Albánia
 _locale.AM=Örményország
 _locale.AT=Ausztria
@@ -86,6 +80,7 @@ _locale.fr=francia
 _locale.hr=horvát
 _locale.hu=magyar
 _locale.is=izlandi
+_locale.it=olasz
 _locale.lb=luxemburgi
 _locale.lt=litván
 _locale.lv=lett
@@ -139,6 +134,7 @@ _metadata.type.images=Képek
 _metadata.type.sounds=Hanganyagok
 _metadata.type.texts=Szövegek
 _metadata.type.video=Videó
+_metadata.type.videos=Videók
 _mine.date.saved=Dátum mentése
 _mine.delete=Törlés
 _mine.email.address=E-mail címek
@@ -158,11 +154,14 @@ _mine.saved.searches=Mentett keresések
 _mine.saved.tags=Mentett címkék
 _mine.user.information=Felhasználói információ
 _mine.user.registration.notification.succeed=Ön sikeresen regisztrált.
+_mine.user.validation.username.in.use=használatban van. Kérjük, hogy válasszon másik felhasználónevet.
 _mine.username=A felhasználónév
 _portal.menu.languagedropdownlist=Nyelv
+_portal.ui.message.actions=Műveletek
 _portal.ui.message.less=Kevesebb
 _portal.ui.message.more=Több
 _portal.ui.message.noscript=A honlap optimális használatához a JavaScript aktiválása szükséges
+_portal.ui.message.relatedcontent=Kapcsolódó tartalom
 _portal.ui.message.success.search.saved=Mentett keresés
 _portal.ui.message.usertags=Felhasználói címkék
 _portal.ui.messages.items=Elemek
@@ -170,10 +169,11 @@ _portal.ui.navigation.matchesfor=Találatok
 _portal.ui.navigation.next=Következő
 _portal.ui.navigation.of=:
 _portal.ui.navigation.page=Oldal
+_portal.ui.navigation.results=Eredmények
 _portal.ui.notification.error=Hiba
+_portal.ui.notification.failure.search.saved=A keresés mentése sikertelen.
 _portal.ui.notification.noitemsfound=Nincs találat
 _portal.ui.reset.searchbox=Törlés
-_portal.ui.results=Eredmények
 _portal.ui.viewingrelateditems=A kapcsolódó elemek megtekintése
 _register-request.emailalreadyregistered=Ezzel az e-mail címmel már regisztráltak.
 _register.email.has.been.sent=E-mailt küldtünk az alábbi címre:
@@ -204,6 +204,7 @@ _search.boolean.or=vagy
 _search.field.any.field=Bármely kulcsszó
 _search.field.creator=Létrehozó
 _search.field.date=Dátum
+_search.field.description=Leírás
 _search.field.provider=Szolgáltató
 _search.field.subject=Téma
 _search.field.title=Cím
@@ -273,4 +274,3 @@ _unused_portal.ui.message.view.as.xml=XML nézet
 _unused_portal.ui.message.view.with.labels=Feliratos nézet
 _unused_portal.ui.message.view.without.labels=Felirat nélküli nézet
 _unused_portal.ui.message.you.have.search.for=Keresés
-_unused_validation.username.in.use=használatban van. Kérjük, hogy válasszon másik felhasználónevet.
