--- a/portal/src/main/resources/i18n/messages_is.properties
+++ b/portal/src/main/resources/i18n/messages_is.properties
@@ -1,3 +1,4 @@
+_action.OpenInNewWindow=Opnast í nýjum glugga
 _action.add.annotation=null
 _action.add.tag=Bæta við tilvísun
 _action.advanced.search=Ítarleit
@@ -16,9 +17,7 @@ _action.search=Leita
 _action.see.all.related.items=Sjá allt tengt efni
 _action.send=Senda
 _action.share.with.friend=Deildu með vini
-_action.videos=Myndbönd
 _action.view.in.original.context=Skoða í upprunalegu samhengi
-_actionOpenInNewWindow=Opnast í nýjum glugga
 _facet.by.collection=null
 _facet.by.country=Eftir landi
 _facet.by.date=Eftir dagsetningu
@@ -27,11 +26,6 @@ _facet.by.provider=Eftir gagnaveitu
 _facet.by.type=Eftir tegund
 _facet.by.user.tag=Eftir tilvísun notanda
 _facet.by.year=null
-_failure.search.saved=Vistun á leit mistókst
-_header.actions=Aðgerðir
-_header.relatedcontent=Tengt efni
-_inc_result_table_full.description=Lýsing
-_language_select.italian=Ítalska (ita)
 _locale.AL=Albaníu
 _locale.AM=Armeníu
 _locale.AT=Austurríki
@@ -86,6 +80,7 @@ _locale.fr=Franska (fre)
 _locale.hr=Króatíska (hrv)
 _locale.hu=Ungverska (hun)
 _locale.is=Íslenska (ice)
+_locale.it=Ítalska (ita)
 _locale.lb=Luxemborgíska (ltz)
 _locale.lt=Litháíska (lit)
 _locale.lv=Lettneska (lav)
@@ -139,6 +134,7 @@ _metadata.type.images=Myndir
 _metadata.type.sounds=Hljóð
 _metadata.type.texts=Textar
 _metadata.type.video=Myndband
+_metadata.type.videos=Myndbönd
 _mine.date.saved=Vistuð dagsetning
 _mine.delete=Eyða
 _mine.email.address=Netfang
@@ -158,11 +154,14 @@ _mine.saved.searches=Vistaðar leitir
 _mine.saved.tags=Vistaðar tilvísanir
 _mine.user.information=Notendaupplýsingar
 _mine.user.registration.notification.succeed=Skráning tókst
+_mine.user.validation.username.in.use=er þegar í notkun. Vinsamlegast veljið annað notandanafn
 _mine.username=Notendanafn
 _portal.menu.languagedropdownlist=Tungumál
+_portal.ui.message.actions=Aðgerðir
 _portal.ui.message.less=Minna/færri
 _portal.ui.message.more=Meira/fleiri
 _portal.ui.message.noscript=Til þess að þessi vefur virki sem skildi þarft þú að leyfa notkun á Java forritum.
+_portal.ui.message.relatedcontent=Tengt efni
 _portal.ui.message.success.search.saved=Leit vistuð
 _portal.ui.message.usertags=Notendatilvísanir
 _portal.ui.messages.items=Eintök
@@ -170,10 +169,11 @@ _portal.ui.navigation.matchesfor=Niðurstöður fyrir
 _portal.ui.navigation.next=Næsta
 _portal.ui.navigation.of=af
 _portal.ui.navigation.page=Siða
+_portal.ui.navigation.results=Niðurstöður
 _portal.ui.notification.error=Villa
+_portal.ui.notification.failure.search.saved=Vistun á leit mistókst
 _portal.ui.notification.noitemsfound=Engin skjöl fundust
 _portal.ui.reset.searchbox=Endurstilla
-_portal.ui.results=Niðurstöður
 _portal.ui.viewingrelateditems=Þú ert að horfa á skyld eintök
 _register-request.emailalreadyregistered=Þetta netfang er þegar skráð
 _register.email.has.been.sent=Tölvupóstur var sendur á þetta netfang
@@ -204,6 +204,7 @@ _search.boolean.or=eða
 _search.field.any.field=Öll svið
 _search.field.creator=Höfundur
 _search.field.date=Dagsetning
+_search.field.description=Lýsing
 _search.field.provider=Gagnaveita
 _search.field.subject=Efni
 _search.field.title=Titill
@@ -273,4 +274,3 @@ _unused_portal.ui.message.view.as.xml=Skoða XML
 _unused_portal.ui.message.view.with.labels=Skoða merki
 _unused_portal.ui.message.view.without.labels=Fela merki
 _unused_portal.ui.message.you.have.search.for=Þú leitaðir að
-_unused_validation.username.in.use=er þegar í notkun. Vinsamlegast veljið annað notandanafn
