--- a/portal/src/main/resources/i18n/messages_it.properties
+++ b/portal/src/main/resources/i18n/messages_it.properties
@@ -1,3 +1,4 @@
+_action.OpenInNewWindow=Apri in un'altra finestra
 _action.add.annotation=null
 _action.add.tag=Aggiungi un tag
 _action.advanced.search=Ricerca avanzata
@@ -16,9 +17,7 @@ _action.search=Cerca
 _action.see.all.related.items=Vedi tutti gli oggetti correlati
 _action.send=Invia
 _action.share.with.friend=Condividi
-_action.videos=Video
 _action.view.in.original.context=Vedi nel contesto originale
-_actionOpenInNewWindow=Apri in un'altra finestra
 _facet.by.collection=null
 _facet.by.country=Per paese
 _facet.by.date=Per data
@@ -27,11 +26,6 @@ _facet.by.provider=Per fonte
 _facet.by.type=Per tipo
 _facet.by.user.tag=Per tag utente
 _facet.by.year=null
-_failure.search.saved=Salvataggio ricerca fallito
-_header.actions=Azioni
-_header.relatedcontent=Contenuti correlati
-_inc_result_table_full.description=Descrizione
-_language_select.italian=italiano
 _locale.AL=Albania
 _locale.AM=Armenia
 _locale.AT=Austria
@@ -86,6 +80,7 @@ _locale.fr=francese
 _locale.hr=croato
 _locale.hu=ungherese
 _locale.is=islandese
+_locale.it=italiano
 _locale.lb=lussemburghese
 _locale.lt=lituano
 _locale.lv=lettone
@@ -139,6 +134,7 @@ _metadata.type.images=Immagini
 _metadata.type.sounds=Suoni
 _metadata.type.texts=Testi
 _metadata.type.video=Video
+_metadata.type.videos=Video
 _mine.date.saved=Dati salvati
 _mine.delete=Cancella
 _mine.email.address=Indirizzo e-mail
@@ -158,11 +154,14 @@ _mine.saved.searches=Ricerche salvate
 _mine.saved.tags=Tag salvati
 _mine.user.information=Informazioni utente
 _mine.user.registration.notification.succeed=La tua registrazione e'avvenuta con successo
+_mine.user.validation.username.in.use=non è disponibile. Sceglierne un altro
 _mine.username=Username
 _portal.menu.languagedropdownlist=Lingua
+_portal.ui.message.actions=Azioni
 _portal.ui.message.less=Meno
 _portal.ui.message.more=Più
 _portal.ui.message.noscript=Per un uso ottimale di questo sito è necessario aver attivato JavaScript
+_portal.ui.message.relatedcontent=Contenuti correlati
 _portal.ui.message.success.search.saved=Ricerca salvata
 _portal.ui.message.usertags=Tag dell'utente
 _portal.ui.messages.items=Oggetti
@@ -170,10 +169,11 @@ _portal.ui.navigation.matchesfor=Risultati per
 _portal.ui.navigation.next=Successivo
 _portal.ui.navigation.of=di
 _portal.ui.navigation.page=Pagina
+_portal.ui.navigation.results=Risultati
 _portal.ui.notification.error=Errore
+_portal.ui.notification.failure.search.saved=Salvataggio ricerca fallito
 _portal.ui.notification.noitemsfound=Nessun oggetto trovato
 _portal.ui.reset.searchbox=Reset
-_portal.ui.results=Risultati
 _portal.ui.viewingrelateditems=Stai visualizzando gli oggetti correlati
 _register-request.emailalreadyregistered=Questa e-mail è stata già registrata
 _register.email.has.been.sent=E' stata inviata una e-mail al seguente indirizzo
@@ -204,6 +204,7 @@ _search.boolean.or=o
 _search.field.any.field=Tutti i campi
 _search.field.creator=Creatore
 _search.field.date=Data
+_search.field.description=Descrizione
 _search.field.provider=Fornitore
 _search.field.subject=Soggetto
 _search.field.title=Titolo
@@ -273,4 +274,3 @@ _unused_portal.ui.message.view.as.xml=Visualizza come XML
 _unused_portal.ui.message.view.with.labels=Visualizza con le etichette
 _unused_portal.ui.message.view.without.labels=Visualizza senza etichette
 _unused_portal.ui.message.you.have.search.for=Hai cercato
-_unused_validation.username.in.use=non è disponibile. Sceglierne un altro
