--- a/portal/src/main/resources/i18n/messages_lv.properties
+++ b/portal/src/main/resources/i18n/messages_lv.properties
@@ -1,3 +1,4 @@
+_action.OpenInNewWindow=Atveras jaunā logā
 _action.add.annotation=null
 _action.add.tag=Pievienot tagu
 _action.advanced.search=Izvērstā meklēšana
@@ -16,9 +17,7 @@ _action.search=Meklēt
 _action.see.all.related.items=Aplūkot visus saistītos objektus
 _action.send=Nosūtīt
 _action.share.with.friend=Dalies ar draugu
-_action.videos=Video
 _action.view.in.original.context=Skatīt oriģinālkontekstā
-_actionOpenInNewWindow=Atveras jaunā logā
 _facet.by.collection=null
 _facet.by.country=Pēc valsts
 _facet.by.date=Pēc datuma
@@ -27,11 +26,6 @@ _facet.by.provider=Pēc piegādātāja
 _facet.by.type=Pēc tipa
 _facet.by.user.tag=Pēc lietotāju tagiem
 _facet.by.year=null
-_failure.search.saved=Meklējuma saglabāšana neizdevās
-_header.actions=Darbības
-_header.relatedcontent=Saistītais saturs
-_inc_result_table_full.description=Apraksts
-_language_select.italian=itāļu
 _locale.AL=Albānija
 _locale.AM=Armēnija
 _locale.AT=Austrija
@@ -86,6 +80,7 @@ _locale.fr=franču
 _locale.hr=horvātu
 _locale.hu=ungāru
 _locale.is=islandiešu
+_locale.it=itāļu
 _locale.lb=luksemburgiešu
 _locale.lt=lietuviešu
 _locale.lv=latviešu
@@ -139,6 +134,7 @@ _metadata.type.images=Attēli
 _metadata.type.sounds=Skaņa
 _metadata.type.texts=Teksti
 _metadata.type.video=Video
+_metadata.type.videos=Video
 _mine.date.saved=Saglabāšanas datums
 _mine.delete=Izdzēst
 _mine.email.address=E-pasta adrese
@@ -158,11 +154,14 @@ _mine.saved.searches=Saglabātie meklējumi
 _mine.saved.tags=Saglabātie tagi
 _mine.user.information=Informācija lietotājiem
 _mine.user.registration.notification.succeed=Jūsu reģistrācija ir veiksmīga
+_mine.user.validation.username.in.use=jau ir izmantots. Lūdzu izvēlieties citu.
 _mine.username=Lietotāja vārds
 _portal.menu.languagedropdownlist=Valoda
+_portal.ui.message.actions=Darbības
 _portal.ui.message.less=Mazāk
 _portal.ui.message.more=Vairāk
 _portal.ui.message.noscript=Lai izmantotu visas šīs vietnes iespējas, jums nepieciešams aktivizēt Java skriptu.
+_portal.ui.message.relatedcontent=Saistītais saturs
 _portal.ui.message.success.search.saved=Meklējums saglabāts
 _portal.ui.message.usertags=Lietotāju tagi
 _portal.ui.messages.items=Objekti
@@ -170,10 +169,11 @@ _portal.ui.navigation.matchesfor=Atbilst
 _portal.ui.navigation.next=Nākamais
 _portal.ui.navigation.of=no
 _portal.ui.navigation.page=Lappuse
+_portal.ui.navigation.results=Rezultāti
 _portal.ui.notification.error=Kļūda
+_portal.ui.notification.failure.search.saved=Meklējuma saglabāšana neizdevās
 _portal.ui.notification.noitemsfound=Nekas nav atrasts
 _portal.ui.reset.searchbox=Notīrīt
-_portal.ui.results=Rezultāti
 _portal.ui.viewingrelateditems=Jūs aplūkojat saistītus objektus
 _register-request.emailalreadyregistered=Šis e-pasta adrese jau ir piereģistrēta
 _register.email.has.been.sent=E-pasts tika nosūtīts uz sekojošu adresi
@@ -204,6 +204,7 @@ _search.boolean.or=vai
 _search.field.any.field=Jebkurš lauks
 _search.field.creator=Autors
 _search.field.date=Datums
+_search.field.description=Apraksts
 _search.field.provider=Piegādātājs
 _search.field.subject=Priekšmets
 _search.field.title=Nosaukums
@@ -273,4 +274,3 @@ _unused_portal.ui.message.view.as.xml=Skatīt kā XML
 _unused_portal.ui.message.view.with.labels=Skatīt ar iezīmēm
 _unused_portal.ui.message.view.without.labels=Skatīt bez iezīmēm
 _unused_portal.ui.message.you.have.search.for=Jūs meklējāt pēc
-_unused_validation.username.in.use=jau ir izmantots. Lūdzu izvēlieties citu.
