--- a/portal/src/main/resources/i18n/messages_mt.properties
+++ b/portal/src/main/resources/i18n/messages_mt.properties
@@ -1,3 +1,4 @@
+_action.OpenInNewWindow=Jinfetaħ f'tieqa ġdida
 _action.add.annotation=null
 _action.add.tag=Żid tikketta
 _action.advanced.search=Tiftix avvanzat
@@ -16,9 +17,7 @@ _action.search=Fittex
 _action.see.all.related.items=Ara l-oġġetti kollha relatati
 _action.send=Ibgħat
 _action.share.with.friend=Aqsam ma' ħabib
-_action.videos=Vidjows
 _action.view.in.original.context=Ara fil-kuntest oriġinali
-_actionOpenInNewWindow=Jinfetaħ f'tieqa ġdida
 _facet.by.collection=null
 _facet.by.country=Bil-pajjiż
 _facet.by.date=Bid-data
@@ -27,11 +26,6 @@ _facet.by.provider=Bil-provditur
 _facet.by.type=Bit-tip
 _facet.by.user.tag=Bit-tikketta tal-użatur
 _facet.by.year=null
-_failure.search.saved=L-issejvjar tat-tiftixa falla
-_header.actions=Azzjonijiet
-_header.relatedcontent=Kontenut relatat
-_inc_result_table_full.description=Deskrizzjoni
-_language_select.italian=Taljan (ita)
 _locale.AL=L-Albanija
 _locale.AM=L-Armenja
 _locale.AT=L-Awstrija
@@ -86,6 +80,7 @@ _locale.fr=Franċiż (fre)
 _locale.hr=Kroat (hrv)
 _locale.hu=Ungeriż (hun)
 _locale.is=Iżlandiż (ice)
+_locale.it=Taljan (ita)
 _locale.lb=Lussemburgiż (ltz)
 _locale.lt=Litwan (lit)
 _locale.lv=Latvjan (lav)
@@ -139,6 +134,7 @@ _metadata.type.images=Xbihat
 _metadata.type.sounds=Ħsejjes
 _metadata.type.texts=Testi
 _metadata.type.video=Vidjow
+_metadata.type.videos=Vidjows
 _mine.date.saved=Data tal-issejvjar
 _mine.delete=Ħassar
 _mine.email.address=Indirizz elettroniku
@@ -158,11 +154,14 @@ _mine.saved.searches=Tiftixiet issejvjati
 _mine.saved.tags=Tikketti ssejvjati
 _mine.user.information=Informazzjoni fuq l-użatur
 _mine.user.registration.notification.succeed=Irreġistrajt b'suċċess
+_mine.user.validation.username.in.use=qed jintuża. Jekk jogħġbok agħżel isem ieħor ta' użatur
 _mine.username=Isem ta' użatur
 _portal.menu.languagedropdownlist=Lingwa
+_portal.ui.message.actions=Azzjonijiet
 _portal.ui.message.less=Anqas
 _portal.ui.message.more=Aktar
 _portal.ui.message.noscript=Għal użu aqwa minn dan is-sit, irid ikollok il-JavaScript attivat
+_portal.ui.message.relatedcontent=Kontenut relatat
 _portal.ui.message.success.search.saved=It-tiftixa ssejvjata
 _portal.ui.message.usertags=Tikketti tal-użaturi
 _portal.ui.messages.items=Oġġetti
@@ -170,10 +169,11 @@ _portal.ui.navigation.matchesfor=Jaqblu ma'
 _portal.ui.navigation.next=Li jmiss
 _portal.ui.navigation.of=minn
 _portal.ui.navigation.page=Paġna
+_portal.ui.navigation.results=Riżultati
 _portal.ui.notification.error=Żball
+_portal.ui.notification.failure.search.saved=L-issejvjar tat-tiftixa falla
 _portal.ui.notification.noitemsfound=Ma nstab l-ebda oġġett
 _portal.ui.reset.searchbox=Issettja mill-ġdid
-_portal.ui.results=Riżultati
 _portal.ui.viewingrelateditems=Qed tara oġġetti relatati
 _register-request.emailalreadyregistered=Dan l-indirizz ġa rreġistrat
 _register.email.has.been.sent=Intbgħatet ittre fl-indirizz li ġej
@@ -204,6 +204,7 @@ _search.boolean.or=jew
 _search.field.any.field=Kwalunkwe qasam
 _search.field.creator=Ħallieq
 _search.field.date=Data
+_search.field.description=Deskrizzjoni
 _search.field.provider=Provditur
 _search.field.subject=Suġġett
 _search.field.title=Titlu
@@ -273,4 +274,3 @@ _unused_portal.ui.message.view.as.xml=Ara bħala XML
 _unused_portal.ui.message.view.with.labels=Ara bit-tikketti
 _unused_portal.ui.message.view.without.labels=Ara bla tikketti
 _unused_portal.ui.message.you.have.search.for=Fittixt
-_unused_validation.username.in.use=qed jintuża. Jekk jogħġbok agħżel isem ieħor ta' użatur
