--- a/portal/src/main/resources/i18n/messages_nl.properties
+++ b/portal/src/main/resources/i18n/messages_nl.properties
@@ -1,3 +1,4 @@
+_action.OpenInNewWindow=Opent in een nieuw venster
 _action.add.annotation=null
 _action.add.tag=Voeg een tag toe
 _action.advanced.search=Uitgebreid zoeken
@@ -16,9 +17,8 @@ _action.search=Zoek
 _action.see.all.related.items=Bekijk alle gerelateerde items
 _action.send=Verstuur
 _action.share.with.friend=Deel met een vriend
-_action.videos=Videos
 _action.view.in.original.context=Bekijk in oorspronkelijke context
-_actionOpenInNewWindow=Opent in een nieuw venster
+_actions.search.order.by=Sorteren op
 _cms.administration.images=Afbeeldingen beheren
 _cms.administration.pages=Paginas beheren
 _cms.administration.title=Beheer
@@ -47,7 +47,6 @@ _cms.upload=Uploaden
 _cms.version.approve=Deze versie goedkeuren
 _cms.version.approve.explain=Door een versie goed te keuren worden alle andere versies verwijderd.
 _cms.version.management=Versiebeheer
-_delving-macros.search.order.by=Sorteren op
 _facet.by.collection=Per collectie
 _facet.by.country=Per land
 _facet.by.date=Per datum
@@ -56,11 +55,6 @@ _facet.by.provider=Per aanbieder
 _facet.by.type=Per soort object
 _facet.by.user.tag=Per gebruikers tag
 _facet.by.year=Per jaar
-_failure.search.saved=Zoekopdracht opslaan mislukt
-_header.actions=Acties
-_header.relatedcontent=Gerelateerde content
-_inc_result_table_full.description=Omschrijving
-_language_select.italian=Italiaans (ita)
 _locale.AL=Albanië
 _locale.AM=Armenië
 _locale.AT=Oosterijk
@@ -115,6 +109,7 @@ _locale.fr=Frans (fra)
 _locale.hr=Kroatisch (kro)
 _locale.hu=Hongaars (hon)
 _locale.is=IJslands (ijs)
+_locale.it=Italiaans (ita)
 _locale.lb=Luxemburgs
 _locale.lt=Litouws (lit)
 _locale.lv=Lets (let)
@@ -168,6 +163,7 @@ _metadata.type.images=Beelden
 _metadata.type.sounds=Geluiden
 _metadata.type.texts=Teksten
 _metadata.type.video=Video
+_metadata.type.videos=Videos
 _mine.date.saved=Datum opgeslagen
 _mine.delete=Verwijder
 _mine.email.address=Email adres
@@ -192,13 +188,16 @@ _mine.user.validation.password.long=Wachtwoord te lang
 _mine.user.validation.password.mismatch=Wachtwoorden ongelijk
 _mine.user.validation.password.tooshort=Wachtwoord te kort
 _mine.user.validation.username.exists=Gebrukersnaam bestaat al
+_mine.user.validation.username.in.use=Is in gebruik. Kies een andere gebruikernaam
 _mine.user.validation.username.invalid.chars=Gebruikersnaam mag alleen letters, cijfers, spaties en onderstreep bevatten
 _mine.user.validation.username.long=Gebruikersnaam is te lang
 _mine.username=Gebruikersnaam
 _portal.menu.languagedropdownlist=Taal
+_portal.ui.message.actions=Acties
 _portal.ui.message.less=Minder
 _portal.ui.message.more=Meer
 _portal.ui.message.noscript=Om optimaal gebruik te kunnen maken van deze website, dient JavaScript op uw computer geactiveerd te zijn.
+_portal.ui.message.relatedcontent=Gerelateerde content
 _portal.ui.message.success.search.saved=Zoekopdracht bewaard
 _portal.ui.message.usertags=Gebruikerstag(s)
 _portal.ui.messages.items=Items
@@ -206,10 +205,11 @@ _portal.ui.navigation.matchesfor=Zoekresultaten voor
 _portal.ui.navigation.next=Volgende
 _portal.ui.navigation.of=van
 _portal.ui.navigation.page=Pagina
+_portal.ui.navigation.results=Resultaten
 _portal.ui.notification.error=Fout
+_portal.ui.notification.failure.search.saved=Zoekopdracht opslaan mislukt
 _portal.ui.notification.noitemsfound=Geen items gevonden
 _portal.ui.reset.searchbox=Reset
-_portal.ui.results=Resultaten
 _portal.ui.viewingrelateditems=U bekijkt gerelateerde items
 _register-request.emailalreadyregistered=Deze email adres is reeds geregistreerd
 _register.email.has.been.sent=Een email is verzonden naar het volgende adres
@@ -241,6 +241,7 @@ _search.boolean.or=of
 _search.field.any.field=Elk veld
 _search.field.creator=Auteur
 _search.field.date=Datum
+_search.field.description=Omschrijving
 _search.field.provider=Aanbieder
 _search.field.subject=Onderwerp
 _search.field.title=Titel
@@ -310,4 +311,3 @@ _unused_portal.ui.message.view.as.xml=Bekijk als XML
 _unused_portal.ui.message.view.with.labels=Bekijk met labels
 _unused_portal.ui.message.view.without.labels=Bekijk zonder labels
 _unused_portal.ui.message.you.have.search.for=U heeft gezocht naar
-_unused_validation.username.in.use=Is in gebruik. Kies een andere gebruikernaam
