--- a/portal/src/main/resources/i18n/messages_pl.properties
+++ b/portal/src/main/resources/i18n/messages_pl.properties
@@ -1,3 +1,4 @@
+_action.OpenInNewWindow=Otwiera się w nowym oknie
 _action.add.annotation=null
 _action.add.tag=Dodaj tag
 _action.advanced.search=Wyszukiwanie zaawansowane
@@ -16,9 +17,7 @@ _action.search=Szukaj
 _action.see.all.related.items=Zobacz wszystkie powiązane dokumenty
 _action.send=Wyślij
 _action.share.with.friend=Poinformuj znajomego
-_action.videos=Filmy wideo
 _action.view.in.original.context=Zobacz w kontekście oryginalnym
-_actionOpenInNewWindow=Otwiera się w nowym oknie
 _facet.by.collection=null
 _facet.by.country=Według kraju
 _facet.by.date=Według daty
@@ -27,11 +26,6 @@ _facet.by.provider=Według instytucji
 _facet.by.type=Według typu
 _facet.by.user.tag=Według tagu użytkownika
 _facet.by.year=null
-_failure.search.saved=Zachowanie wyszukiwania nie powiodło się
-_header.actions=Działania
-_header.relatedcontent=Powiązana zawartość
-_inc_result_table_full.description=Opis
-_language_select.italian=Włoski (ita)
 _locale.AL=Albania
 _locale.AM=Armenia
 _locale.AT=Austria
@@ -86,6 +80,7 @@ _locale.fr=Francuski (fre)
 _locale.hr=Chorwacki (hrv)
 _locale.hu=węgierski (hun)
 _locale.is=Islandzki (ice)
+_locale.it=Włoski (ita)
 _locale.lb=luksemburski
 _locale.lt=Litewski (lit)
 _locale.lv=Łotewski (lav)
@@ -139,6 +134,7 @@ _metadata.type.images=Obrazy
 _metadata.type.sounds=Nagrania dźwiękowe
 _metadata.type.texts=Teksty
 _metadata.type.video=Film wideo
+_metadata.type.videos=Filmy wideo
 _mine.date.saved=Data zachowana
 _mine.delete=Usuń
 _mine.email.address=Adres email
@@ -158,11 +154,14 @@ _mine.saved.searches=Zachowane wyszukiwania
 _mine.saved.tags=Zachowane tagi
 _mine.user.information=Informacja o użytkowniku
 _mine.user.registration.notification.succeed=Rejestracja zakończona powodzeniem
+_mine.user.validation.username.in.use=już wykorzystywana. Proszę wybrać inną nazwę użytkownika
 _mine.username=Nazwa użytkownika
 _portal.menu.languagedropdownlist=Język
+_portal.ui.message.actions=Działania
 _portal.ui.message.less=Mniej
 _portal.ui.message.more=Więcej
 _portal.ui.message.noscript=Aktywacja JavaScript poprawia działanie strony
+_portal.ui.message.relatedcontent=Powiązana zawartość
 _portal.ui.message.success.search.saved=Zapamiętane wyszukiwania
 _portal.ui.message.usertags=Tagi użytkowników
 _portal.ui.messages.items=Dokumenty
@@ -170,10 +169,11 @@ _portal.ui.navigation.matchesfor=Opisy pasujące do terminu:
 _portal.ui.navigation.next=Następny
 _portal.ui.navigation.of=z
 _portal.ui.navigation.page=Strona
+_portal.ui.navigation.results=Wyniki
 _portal.ui.notification.error=Błąd
+_portal.ui.notification.failure.search.saved=Zachowanie wyszukiwania nie powiodło się
 _portal.ui.notification.noitemsfound=Brak wyników wyszukiwania
 _portal.ui.reset.searchbox=Wyczyść
-_portal.ui.results=Wyniki
 _portal.ui.viewingrelateditems=Oglądasz powiązane dokumenty
 _register-request.emailalreadyregistered=Email został zarejestrowany
 _register.email.has.been.sent=Email został wysłany pod następujący adres
@@ -204,6 +204,7 @@ _search.boolean.or=lub
 _search.field.any.field=Dowolne pole
 _search.field.creator=Twórca
 _search.field.date=Data
+_search.field.description=Opis
 _search.field.provider=Instytucja
 _search.field.subject=Temat
 _search.field.title=Tytuł
@@ -273,4 +274,3 @@ _unused_portal.ui.message.view.as.xml=Widok XML
 _unused_portal.ui.message.view.with.labels=Widok z etykietami
 _unused_portal.ui.message.view.without.labels=Widok bez etykiet
 _unused_portal.ui.message.you.have.search.for=Szukasz
-_unused_validation.username.in.use=już wykorzystywana. Proszę wybrać inną nazwę użytkownika
