--- a/portal/src/main/resources/i18n/messages_pt.properties
+++ b/portal/src/main/resources/i18n/messages_pt.properties
@@ -1,3 +1,4 @@
+_action.OpenInNewWindow=Abre uma nova janela
 _action.add.annotation=null
 _action.add.tag=Adicionar uma etiqueta
 _action.advanced.search=Pesquisa avançada
@@ -16,9 +17,7 @@ _action.search=Pesquisa
 _action.see.all.related.items=Ver todos os items relacionados
 _action.send=Enviado
 _action.share.with.friend=Partilhe com um amigo
-_action.videos=Vídeos
 _action.view.in.original.context=Ver no contexto original
-_actionOpenInNewWindow=Abre uma nova janela
 _facet.by.collection=null
 _facet.by.country=Por país
 _facet.by.date=Por data
@@ -27,11 +26,6 @@ _facet.by.provider=Por fornecedor
 _facet.by.type=Por tipo
 _facet.by.user.tag=Por etiqueta de utilizador
 _facet.by.year=null
-_failure.search.saved=Guardar a pesquisa falhou
-_header.actions=Acções
-_header.relatedcontent=Conteúdo relacionado
-_inc_result_table_full.description=Descrição
-_language_select.italian=Italiano (ita)
 _locale.AL=Albânia
 _locale.AM=Arménia
 _locale.AT=Austria
@@ -86,6 +80,7 @@ _locale.fr=Francês (fre)
 _locale.hr=Servo-croata(Croácia) (hrv)
 _locale.hu=Húngaro (hun)
 _locale.is=Islandês (ice)
+_locale.it=Italiano (ita)
 _locale.lb=Luxemburguês (ltz)
 _locale.lt=Lítuano (lit)
 _locale.lv=Letão (lav)
@@ -139,6 +134,7 @@ _metadata.type.images=Imagens
 _metadata.type.sounds=Sons
 _metadata.type.texts=Textos
 _metadata.type.video=Vídeo
+_metadata.type.videos=Vídeos
 _mine.date.saved=Guardado em (data)
 _mine.delete=Apagar
 _mine.email.address=Endereço de email
@@ -158,11 +154,14 @@ _mine.saved.searches=Pesquisas guardadas
 _mine.saved.tags=Etiquetas guardadas
 _mine.user.information=Informação do utilizador
 _mine.user.registration.notification.succeed=O seu registo foi efectuado com sucesso
+_mine.user.validation.username.in.use=está a ser utilizado. Por favor escolha outro nome de utilizador
 _mine.username=Nome de utilizador
 _portal.menu.languagedropdownlist=Língua
+_portal.ui.message.actions=Acções
 _portal.ui.message.less=Menos
 _portal.ui.message.more=Mais
 _portal.ui.message.noscript=Para optimizar a sua utilização deste sítio Web necessita de ter JavaScript activado
+_portal.ui.message.relatedcontent=Conteúdo relacionado
 _portal.ui.message.success.search.saved=Pesquisa guardada
 _portal.ui.message.usertags=Etiquetas de utilizador
 _portal.ui.messages.items=Itens
@@ -170,10 +169,11 @@ _portal.ui.navigation.matchesfor=Resultados para
 _portal.ui.navigation.next=Seguinte
 _portal.ui.navigation.of=de
 _portal.ui.navigation.page=Página
+_portal.ui.navigation.results=Resultados
 _portal.ui.notification.error=Erro
+_portal.ui.notification.failure.search.saved=Guardar a pesquisa falhou
 _portal.ui.notification.noitemsfound=Não foram encontrados items
 _portal.ui.reset.searchbox=Limpar
-_portal.ui.results=Resultados
 _portal.ui.viewingrelateditems=Está a visualizar items relacionados
 _register-request.emailalreadyregistered=Este email já foi registado
 _register.email.has.been.sent=Foi-lhe enviado um email para o seguinte endereço
@@ -204,6 +204,7 @@ _search.boolean.or=ou
 _search.field.any.field=Qualquer campo
 _search.field.creator=Criador
 _search.field.date=Data
+_search.field.description=Descrição
 _search.field.provider=Fornecedor
 _search.field.subject=Assunto
 _search.field.title=Título
@@ -273,4 +274,3 @@ _unused_portal.ui.message.view.as.xml=Ver em XML
 _unused_portal.ui.message.view.with.labels=Ver com etiquetas
 _unused_portal.ui.message.view.without.labels=Ver sem etiquetas
 _unused_portal.ui.message.you.have.search.for=Pesquisou por
-_unused_validation.username.in.use=está a ser utilizado. Por favor escolha outro nome de utilizador
