--- a/portal/src/main/resources/i18n/messages_ro.properties
+++ b/portal/src/main/resources/i18n/messages_ro.properties
@@ -1,3 +1,4 @@
+_action.OpenInNewWindow=Se deschide într-o fereastră nouă
 _action.add.annotation=null
 _action.add.tag=Adaugă un descriptor
 _action.advanced.search=Căutare avansată
@@ -16,9 +17,7 @@ _action.search=Caută
 _action.see.all.related.items=Vezi toate resursele asociate
 _action.send=Trimite
 _action.share.with.friend=Partajează cu un prieten
-_action.videos=Clipuri video
 _action.view.in.original.context=Prezentare în contextul original
-_actionOpenInNewWindow=Se deschide într-o fereastră nouă
 _facet.by.collection=null
 _facet.by.country=După ţară
 _facet.by.date=După dată
@@ -27,11 +26,6 @@ _facet.by.provider=După furnizor
 _facet.by.type=După tip
 _facet.by.user.tag=După descriptori-utilizator
 _facet.by.year=null
-_failure.search.saved=Salvarea interogării a eşuat
-_header.actions=Acţiuni
-_header.relatedcontent=Conţinut asociat
-_inc_result_table_full.description=Descriere
-_language_select.italian=Italiană (ita)
 _locale.AL=Albania
 _locale.AM=Armenia
 _locale.AT=Austria
@@ -86,6 +80,7 @@ _locale.fr=Franceză (fre)
 _locale.hr=Croată (hrv)
 _locale.hu=Maghiară (hun)
 _locale.is=Islandeză (ice)
+_locale.it=Italiană (ita)
 _locale.lb=Luxemburgheză (ltz)
 _locale.lt=Lituaniană (lit)
 _locale.lv=Letonă (lav)
@@ -139,6 +134,7 @@ _metadata.type.images=Imagini
 _metadata.type.sounds=Sonor
 _metadata.type.texts=Texte
 _metadata.type.video=Video
+_metadata.type.videos=Clipuri video
 _mine.date.saved=Dată salvată
 _mine.delete=Şterge
 _mine.email.address=Adresa de meil
@@ -158,11 +154,14 @@ _mine.saved.searches=Interogări salvate
 _mine.saved.tags=Descriptori salvaţi
 _mine.user.information=Informaţii despre utilizator
 _mine.user.registration.notification.succeed=V-aţi înregistrat cu succes
+_mine.user.validation.username.in.use=este deja utilizat. Vă rog să alegeţi un alt nume-utilizator
 _mine.username=Uneme-utilizator
 _portal.menu.languagedropdownlist=Limba
+_portal.ui.message.actions=Acţiuni
 _portal.ui.message.less=Mai puţin
 _portal.ui.message.more=Mai mult
 _portal.ui.message.noscript=Pentru o utilizare optimală a acestui sait, e necesar să aveți JavaScript activat.
+_portal.ui.message.relatedcontent=Conţinut asociat
 _portal.ui.message.success.search.saved=Interogare salvată
 _portal.ui.message.usertags=Descriptori-utilizator
 _portal.ui.messages.items=Resurse
@@ -170,10 +169,11 @@ _portal.ui.navigation.matchesfor=Corespunde cu
 _portal.ui.navigation.next=Următorul/următoarea
 _portal.ui.navigation.of=a(l)/ai/ale
 _portal.ui.navigation.page=Pagină
+_portal.ui.navigation.results=rezultate
 _portal.ui.notification.error=Eroare
+_portal.ui.notification.failure.search.saved=Salvarea interogării a eşuat
 _portal.ui.notification.noitemsfound=Nu s-a găsit nici o resursă
 _portal.ui.reset.searchbox=Resetează
-_portal.ui.results=rezultate
 _portal.ui.viewingrelateditems=Vedeţi toate resursele asociate
 _register-request.emailalreadyregistered=Această adresă de meil este deja înregistrată
 _register.email.has.been.sent=Un meil a fost expediat la următoarea adresă
@@ -204,6 +204,7 @@ _search.boolean.or=sau
 _search.field.any.field=Oricare câmp
 _search.field.creator=Creator
 _search.field.date=Data
+_search.field.description=Descriere
 _search.field.provider=Furnizor
 _search.field.subject=Subiect
 _search.field.title=Titlu
@@ -273,4 +274,3 @@ _unused_portal.ui.message.view.as.xml=Prezentare în format XML
 _unused_portal.ui.message.view.with.labels=Prezentare cu etichete
 _unused_portal.ui.message.view.without.labels=Prezentare fără etichete
 _unused_portal.ui.message.you.have.search.for=Aţi căutat
-_unused_validation.username.in.use=este deja utilizat. Vă rog să alegeţi un alt nume-utilizator
