--- a/portal/src/main/resources/i18n/messages_sl.properties
+++ b/portal/src/main/resources/i18n/messages_sl.properties
@@ -1,3 +1,4 @@
+_action.OpenInNewWindow=Odpre se v novem oknu
 _action.add.annotation=null
 _action.add.tag=Dodaj zaznamek
 _action.advanced.search=Napredno iskanje
@@ -16,9 +17,7 @@ _action.search=Išči
 _action.see.all.related.items=Prikaži vse sorodne vsebine
 _action.send=Pošlji
 _action.share.with.friend=Pošlji prijatelju
-_action.videos=Video
 _action.view.in.original.context=Prikaži v izvirnem kontekstu
-_actionOpenInNewWindow=Odpre se v novem oknu
 _facet.by.collection=null
 _facet.by.country=Po državi
 _facet.by.date=Po datumu
@@ -27,11 +26,6 @@ _facet.by.provider=Po ponudniku
 _facet.by.type=Po tipu
 _facet.by.user.tag=Po zaznamkih uporabnikov
 _facet.by.year=null
-_failure.search.saved=Shranjevanje iskanja ni uspelo
-_header.actions=Možnosti
-_header.relatedcontent=Sorodne vsebine
-_inc_result_table_full.description=Opis
-_language_select.italian=italijanščina (ita)
 _locale.AL=Albanija
 _locale.AM=Armenija
 _locale.AT=Avstrija
@@ -86,6 +80,7 @@ _locale.fr=francoščina (fre)
 _locale.hr=hrvaščina (hrv)
 _locale.hu=madžarščina (hun)
 _locale.is=islandščina (ice)
+_locale.it=italijanščina (ita)
 _locale.lb=luksemburščina (ltz)
 _locale.lt=litovščina (lit)
 _locale.lv=latvijščina (lav)
@@ -139,6 +134,7 @@ _metadata.type.images=Slike
 _metadata.type.sounds=Zvoki
 _metadata.type.texts=Besedila
 _metadata.type.video=Video
+_metadata.type.videos=Video
 _mine.date.saved=Datum
 _mine.delete=Izbriši
 _mine.email.address=Elektronski naslov
@@ -158,11 +154,14 @@ _mine.saved.searches=Shranjena iskanja
 _mine.saved.tags=Shranjeni zaznamki
 _mine.user.information=Podatki o uporabniku
 _mine.user.registration.notification.succeed=Uspešno ste se registrirali
+_mine.user.validation.username.in.use=je že uporabljeno. Prosimo, izberite drugo uporabniško ime
 _mine.username=Uporabniško ime
 _portal.menu.languagedropdownlist=Jezik
+_portal.ui.message.actions=Možnosti
 _portal.ui.message.less=Manj
 _portal.ui.message.more=Več
 _portal.ui.message.noscript=Stran deluje najbolje, če je JavaScript aktiviran
+_portal.ui.message.relatedcontent=Sorodne vsebine
 _portal.ui.message.success.search.saved=Išči po shranjenih iskanjih
 _portal.ui.message.usertags=Uporabniški zaznamki
 _portal.ui.messages.items=Predmeti
@@ -170,10 +169,11 @@ _portal.ui.navigation.matchesfor=Zadetki za
 _portal.ui.navigation.next=Naprej
 _portal.ui.navigation.of=od
 _portal.ui.navigation.page=Stran
+_portal.ui.navigation.results=Rezultati
 _portal.ui.notification.error=Napaka
+_portal.ui.notification.failure.search.saved=Shranjevanje iskanja ni uspelo
 _portal.ui.notification.noitemsfound=Ni zadetkov
 _portal.ui.reset.searchbox=Ponastavi
-_portal.ui.results=Rezultati
 _portal.ui.viewingrelateditems=Pregledujete sorodne predmete
 _register-request.emailalreadyregistered=Uporabnik s tem elektronskim naslovom se je že registriral
 _register.email.has.been.sent=Na navedeni naslov smo poslali sporočilo
@@ -204,6 +204,7 @@ _search.boolean.or=ali
 _search.field.any.field=Vsa polja
 _search.field.creator=Avtor
 _search.field.date=Datum
+_search.field.description=Opis
 _search.field.provider=Ponudnik
 _search.field.subject=Predmet
 _search.field.title=Naslov
@@ -273,4 +274,3 @@ _unused_portal.ui.message.view.as.xml=Poglej kot XML
 _unused_portal.ui.message.view.with.labels=Pogled z oznakami
 _unused_portal.ui.message.view.without.labels=Pogled brez oznak
 _unused_portal.ui.message.you.have.search.for=Iskali ste
-_unused_validation.username.in.use=je že uporabljeno. Prosimo, izberite drugo uporabniško ime
