--- a/portal/src/main/resources/i18n/messages_sv.properties
+++ b/portal/src/main/resources/i18n/messages_sv.properties
@@ -1,3 +1,4 @@
+_action.OpenInNewWindow=Öppna i ett nytt fönster
 _action.add.annotation=null
 _action.add.tag=Lägg till en märkning
 _action.advanced.search=Avancerad sökning
@@ -16,9 +17,7 @@ _action.search=Sök
 _action.see.all.related.items=Visa alla liknande objekt
 _action.send=Skicka
 _action.share.with.friend=Tipsa en vän
-_action.videos=Videor
 _action.view.in.original.context=Visa i ursprungssammanhang
-_actionOpenInNewWindow=Öppna i ett nytt fönster
 _facet.by.collection=null
 _facet.by.country=Efter land
 _facet.by.date=Efter datum
@@ -27,11 +26,6 @@ _facet.by.provider=Efter leverantör
 _facet.by.type=Efter typ
 _facet.by.user.tag=Efter användarmärkning
 _facet.by.year=null
-_failure.search.saved=Det gick inte att spara sökningen
-_header.actions=Åtgärder
-_header.relatedcontent=Liknande material
-_inc_result_table_full.description=Beskrivning
-_language_select.italian=Italienska (ita)
 _locale.AL=Albanien
 _locale.AM=Armenien
 _locale.AT=Österrike
@@ -86,6 +80,7 @@ _locale.fr=Franska (fre)
 _locale.hr=Kroatiska (hrv)
 _locale.hu=Ungerska (hun)
 _locale.is=Isländska (ice)
+_locale.it=Italienska (ita)
 _locale.lb=Luxemburgiska (ltz)
 _locale.lt=Litauiska (lit)
 _locale.lv=Lettiska (lav)
@@ -139,6 +134,7 @@ _metadata.type.images=Bilder
 _metadata.type.sounds=Ljud
 _metadata.type.texts=Texter
 _metadata.type.video=Video
+_metadata.type.videos=Videor
 _mine.date.saved=Informationen har sparats
 _mine.delete=Ta bort
 _mine.email.address=E-postadress
@@ -158,11 +154,14 @@ _mine.saved.searches=Sparade sökningar
 _mine.saved.tags=Sparade märkningar
 _mine.user.information=Användaruppgifter
 _mine.user.registration.notification.succeed=Du har nu registrerat dig
+_mine.user.validation.username.in.use=används redan. Välj ett annat användarnamn
 _mine.username=Användarnamn
 _portal.menu.languagedropdownlist=Språk
+_portal.ui.message.actions=Åtgärder
 _portal.ui.message.less=Dölj
 _portal.ui.message.more=Visa mer
 _portal.ui.message.noscript=Om du vill kunna använda den här webbplatsen fullt ut måste JavaScript vara aktiverat
+_portal.ui.message.relatedcontent=Liknande material
 _portal.ui.message.success.search.saved=Sök bland sparade sökningar
 _portal.ui.message.usertags=Användarmärkning
 _portal.ui.messages.items=Objekt
@@ -170,10 +169,11 @@ _portal.ui.navigation.matchesfor=Träffar för
 _portal.ui.navigation.next=Nästa
 _portal.ui.navigation.of=av
 _portal.ui.navigation.page=Sida
+_portal.ui.navigation.results=Resultat
 _portal.ui.notification.error=Fel
+_portal.ui.notification.failure.search.saved=Det gick inte att spara sökningen
 _portal.ui.notification.noitemsfound=Inga objekt hittades
 _portal.ui.reset.searchbox=Återställ
-_portal.ui.results=Resultat
 _portal.ui.viewingrelateditems=Du visar liknande objekt
 _register-request.emailalreadyregistered=Den här e-postadressen har redan registrerats
 _register.email.has.been.sent=E-post har skickats till följande adress
@@ -204,6 +204,7 @@ _search.boolean.or=eller
 _search.field.any.field=Alla fält
 _search.field.creator=Upphovsperson
 _search.field.date=Datum
+_search.field.description=Beskrivning
 _search.field.provider=Leverantör
 _search.field.subject=Ämne
 _search.field.title=Titel
@@ -273,4 +274,3 @@ _unused_portal.ui.message.view.as.xml=Visa som XML
 _unused_portal.ui.message.view.with.labels=Visa med etiketter
 _unused_portal.ui.message.view.without.labels=Visa utan etiketter
 _unused_portal.ui.message.you.have.search.for=Du sökte efter
-_unused_validation.username.in.use=används redan. Välj ett annat användarnamn
