--- a/portal/src/main/resources/i18n/messages_xx.properties
+++ b/portal/src/main/resources/i18n/messages_xx.properties
@@ -1,3 +1,4 @@
+_action.OpenInNewWindow=XXXXXX
 _action.add.annotation=null
 _action.add.tag=XXXXXX
 _action.advanced.search=XXXXXX
@@ -16,9 +17,7 @@ _action.search=XXXXXX
 _action.see.all.related.items=XXXXXX
 _action.send=XXXXXX
 _action.share.with.friend=XXXXXX
-_action.videos=XXXXXX
 _action.view.in.original.context=XXXXXX
-_actionOpenInNewWindow=XXXXXX
 _facet.by.collection=null
 _facet.by.country=XXXXXX
 _facet.by.date=XXXXXX
@@ -27,11 +26,6 @@ _facet.by.provider=XXXXXX
 _facet.by.type=XXXXXX
 _facet.by.user.tag=XXXXXX
 _facet.by.year=null
-_failure.search.saved=XXXXXX
-_header.actions=XXXXXX
-_header.relatedcontent=XXXXXX
-_inc_result_table_full.description=XXXXXX
-_language_select.italian=XXXXXX
 _locale.AL=XXXXXX
 _locale.AM=XXXXXX
 _locale.AT=XXXXXX
@@ -86,6 +80,7 @@ _locale.fr=XXXXXX
 _locale.hr=XXXXXX
 _locale.hu=XXXXXX
 _locale.is=XXXXXX
+_locale.it=XXXXXX
 _locale.lb=XXXXXX
 _locale.lt=XXXXXX
 _locale.lv=XXXXXX
@@ -139,6 +134,7 @@ _metadata.type.images=XXXXXX
 _metadata.type.sounds=XXXXXX
 _metadata.type.texts=XXXXXX
 _metadata.type.video=XXXXXX
+_metadata.type.videos=XXXXXX
 _mine.date.saved=XXXXXX
 _mine.delete=XXXXXX
 _mine.email.address=XXXXXX
@@ -158,11 +154,14 @@ _mine.saved.searches=XXXXXX
 _mine.saved.tags=XXXXXX
 _mine.user.information=XXXXXX
 _mine.user.registration.notification.succeed=XXXXXX
+_mine.user.validation.username.in.use=XXXXXX
 _mine.username=XXXXXX
 _portal.menu.languagedropdownlist=XXXXXX
+_portal.ui.message.actions=XXXXXX
 _portal.ui.message.less=XXXXXX
 _portal.ui.message.more=XXXXXX
 _portal.ui.message.noscript=XXXXXX
+_portal.ui.message.relatedcontent=XXXXXX
 _portal.ui.message.success.search.saved=XXXXXX
 _portal.ui.message.usertags=XXXXXX
 _portal.ui.messages.items=XXXXXX
@@ -170,10 +169,11 @@ _portal.ui.navigation.matchesfor=XXXXXX
 _portal.ui.navigation.next=XXXXXX
 _portal.ui.navigation.of=XXXXXX
 _portal.ui.navigation.page=XXXXXX
+_portal.ui.navigation.results=XXXXXX
 _portal.ui.notification.error=XXXXXX
+_portal.ui.notification.failure.search.saved=XXXXXX
 _portal.ui.notification.noitemsfound=XXXXXX
 _portal.ui.reset.searchbox=XXXXXX
-_portal.ui.results=XXXXXX
 _portal.ui.viewingrelateditems=XXXXXX
 _register-request.emailalreadyregistered=XXXXXX
 _register.email.has.been.sent=XXXXXX
@@ -204,6 +204,7 @@ _search.boolean.or=XXXXXX
 _search.field.any.field=XXXXXX
 _search.field.creator=XXXXXX
 _search.field.date=XXXXXX
+_search.field.description=XXXXXX
 _search.field.provider=XXXXXX
 _search.field.subject=XXXXXX
 _search.field.title=XXXXXX
@@ -273,4 +274,3 @@ _unused_portal.ui.message.view.as.xml=XXXXXX
 _unused_portal.ui.message.view.with.labels=XXXXXX
 _unused_portal.ui.message.view.without.labels=XXXXXX
 _unused_portal.ui.message.you.have.search.for=XXXXXX
-_unused_validation.username.in.use=XXXXXX
