--- a/portal/src/main/resources/i18n/messages_hr.properties
+++ b/portal/src/main/resources/i18n/messages_hr.properties
@@ -1,3 +1,4 @@
+_action.OpenInNewWindow=Opens in a new window
 _action.add.annotation=null
 _action.add.tag=Add a tag
 _action.advanced.search=Advanced search
@@ -16,9 +17,7 @@ _action.search=Search
 _action.see.all.related.items=See all related items
 _action.send=Send
 _action.share.with.friend=Share with a friend
-_action.videos=Videos
 _action.view.in.original.context=View in original context
-_actionOpenInNewWindow=Opens in a new window
 _facet.by.collection=null
 _facet.by.country=By country
 _facet.by.date=By date
@@ -27,11 +26,6 @@ _facet.by.provider=By provider
 _facet.by.type=By type
 _facet.by.user.tag=By user tag
 _facet.by.year=null
-_failure.search.saved=Saving search failed
-_header.actions=Actions
-_header.relatedcontent=Related content
-_inc_result_table_full.description=Description
-_language_select.italian=talijanski (ita)
 _locale.AL=Albania
 _locale.AM=Armenia
 _locale.AT=Austrija
@@ -86,6 +80,7 @@ _locale.fr=francuski (fre)
 _locale.hr=hrvatski (hrv)
 _locale.hu=madžarski (hun)
 _locale.is=islandski (ice)
+_locale.it=talijanski (ita)
 _locale.lb=Luxemburgish (ltz)
 _locale.lt=litvanski (lit)
 _locale.lv=latvijski (lav)
@@ -139,6 +134,7 @@ _metadata.type.images=Images
 _metadata.type.sounds=Sounds
 _metadata.type.texts=Texts
 _metadata.type.video=Video
+_metadata.type.videos=Videos
 _mine.date.saved=Date saved
 _mine.delete=Delete
 _mine.email.address=Email address
@@ -158,11 +154,14 @@ _mine.saved.searches=Saved searches
 _mine.saved.tags=Saved tags
 _mine.user.information=User information
 _mine.user.registration.notification.succeed=Uspješno ste se registrirali
+_mine.user.validation.username.in.use=koristi se. Molimo odaberite drugo korisničko ime
 _mine.username=KOrisničko ime
 _portal.menu.languagedropdownlist=Jezik
+_portal.ui.message.actions=Actions
 _portal.ui.message.less=Less
 _portal.ui.message.more=More
 _portal.ui.message.noscript=To make optimal use of this website you need to have JavaScript activated
+_portal.ui.message.relatedcontent=Related content
 _portal.ui.message.success.search.saved=Search saved
 _portal.ui.message.usertags=User tags
 _portal.ui.messages.items=Items
@@ -170,10 +169,11 @@ _portal.ui.navigation.matchesfor=Rezultati za
 _portal.ui.navigation.next=Next
 _portal.ui.navigation.of=of
 _portal.ui.navigation.page=Page
+_portal.ui.navigation.results=Results
 _portal.ui.notification.error=Error
+_portal.ui.notification.failure.search.saved=Saving search failed
 _portal.ui.notification.noitemsfound=No items found
 _portal.ui.reset.searchbox=Reset
-_portal.ui.results=Results
 _portal.ui.viewingrelateditems=You are viewing related items
 _register-request.emailalreadyregistered=This email is already registered
 _register.email.has.been.sent=An email has been sent to the following address
@@ -204,6 +204,7 @@ _search.boolean.or=ili
 _search.field.any.field=Bilo koje polje
 _search.field.creator=Creator
 _search.field.date=Date
+_search.field.description=Description
 _search.field.provider=Provider
 _search.field.subject=Subject
 _search.field.title=Title
@@ -273,4 +274,3 @@ _unused_portal.ui.message.view.as.xml=View as XML
 _unused_portal.ui.message.view.with.labels=View with labels
 _unused_portal.ui.message.view.without.labels=View without labels
 _unused_portal.ui.message.you.have.search.for=You have searched for
-_unused_validation.username.in.use=koristi se. Molimo odaberite drugo korisničko ime
