--- a/portal/src/main/resources/i18n/messages_lt.properties
+++ b/portal/src/main/resources/i18n/messages_lt.properties
@@ -1,3 +1,4 @@
+_action.OpenInNewWindow=Atidaro naujame lange
 _action.add.annotation=null
 _action.add.tag=Pridėti žymenį
 _action.advanced.search=Patikslintoji paieška
@@ -16,9 +17,7 @@ _action.search=Paieška
 _action.see.all.related.items=Žiūrėti visus susijusius vienetus
 _action.send=Siųsti
 _action.share.with.friend=Dalinkitės su draugu
-_action.videos=Video
 _action.view.in.original.context=Žiūrėti originalų kontekstą
-_actionOpenInNewWindow=Atidaro naujame lange
 _facet.by.collection=null
 _facet.by.country=Pagal valstybę
 _facet.by.date=Pagal datą
@@ -27,11 +26,6 @@ _facet.by.provider=Pagal tiekėją
 _facet.by.type=Pagal tipą
 _facet.by.user.tag=Pagal vartotojo žymenį
 _facet.by.year=null
-_failure.search.saved=Paieškos išsaugojimas nepavyko
-_header.actions=Veiksmai
-_header.relatedcontent=Susijęs turinys
-_inc_result_table_full.description=Aprašymas
-_language_select.italian=Italų (ita)
 _locale.AL=Albanija
 _locale.AM=Armėnija
 _locale.AT=Austrija
@@ -86,6 +80,7 @@ _locale.fr=Prancūzų (fre)
 _locale.hr=Kroatų (hrv)
 _locale.hu=Vengrų (hun)
 _locale.is=Islandų (ice)
+_locale.it=Italų (ita)
 _locale.lb=Liuksemburgiečių
 _locale.lt=Lietuvių (lit)
 _locale.lv=Latvių (lav)
@@ -139,6 +134,7 @@ _metadata.type.images=Paveikslai
 _metadata.type.sounds=Garso medžiaga
 _metadata.type.texts=Tekstai
 _metadata.type.video=Video
+_metadata.type.videos=Video
 _mine.date.saved=Išsaugota data
 _mine.delete=Trinti
 _mine.email.address=Elektroninio pašto adresas
@@ -158,11 +154,14 @@ _mine.saved.searches=Išsaugotos užklausos
 _mine.saved.tags=Išsaugoti žymenys
 _mine.user.information=Vartotojo informacija
 _mine.user.registration.notification.succeed=Registracija baigta
+_mine.user.validation.username.in.use=jau naudojamas. Pasirinkite kitą vartotojo vardą
 _mine.username=Vartotojo vardas
 _portal.menu.languagedropdownlist=Kalba
+_portal.ui.message.actions=Veiksmai
 _portal.ui.message.less=Mažiau
 _portal.ui.message.more=Daugiau
 _portal.ui.message.noscript=Norint naudotis šiuo tinklalapiu, būtina turėti aktyvuotą JavaScript
+_portal.ui.message.relatedcontent=Susijęs turinys
 _portal.ui.message.success.search.saved=Išsaugota paieška
 _portal.ui.message.usertags=Vartotojo žymenys
 _portal.ui.messages.items=Elementai
@@ -170,10 +169,11 @@ _portal.ui.navigation.matchesfor=Jūs ieškote
 _portal.ui.navigation.next=Kitas
 _portal.ui.navigation.of={preposition, gram.}
 _portal.ui.navigation.page=Puslapis
+_portal.ui.navigation.results=Rezultatai
 _portal.ui.notification.error=Klaida
+_portal.ui.notification.failure.search.saved=Paieškos išsaugojimas nepavyko
 _portal.ui.notification.noitemsfound=Nerasta
 _portal.ui.reset.searchbox=Į pradžią
-_portal.ui.results=Rezultatai
 _portal.ui.viewingrelateditems=Žiūrite susijusius vienetus
 _register-request.emailalreadyregistered=Šis elektroninio pašto adresas jau užregistruotas
 _register.email.has.been.sent=Elektroninis laiškas išsiųstas šiuo adresu
@@ -204,6 +204,7 @@ _search.boolean.or=arba
 _search.field.any.field=Bet kuris laukas
 _search.field.creator=Kūrėjas
 _search.field.date=Data
+_search.field.description=Aprašymas
 _search.field.provider=Tiekėjas
 _search.field.subject=Dalykas
 _search.field.title=Antraštė
@@ -273,4 +274,3 @@ _unused_portal.ui.message.view.as.xml=Žiūrėti kaip XML
 _unused_portal.ui.message.view.with.labels=Žiūrėti etiketes
 _unused_portal.ui.message.view.without.labels=Žiūrėti be etikečių
 _unused_portal.ui.message.you.have.search.for=Atlikote paiešką
-_unused_validation.username.in.use=jau naudojamas. Pasirinkite kitą vartotojo vardą
