--- a/portal/src/main/resources/i18n/messages_no.properties
+++ b/portal/src/main/resources/i18n/messages_no.properties
@@ -1,3 +1,4 @@
+_action.OpenInNewWindow=Åpne i nytt vindu
 _action.add.annotation=null
 _action.add.tag=Legg til en tag
 _action.advanced.search=Avansert søk
@@ -16,9 +17,7 @@ _action.search=Søk
 _action.see.all.related.items=Se alle relaterte objekter
 _action.send=Send
 _action.share.with.friend=Del med en venn
-_action.videos=Videoer
 _action.view.in.original.context=Se i opprinnelig kontekst
-_actionOpenInNewWindow=Åpne i nytt vindu
 _facet.by.collection=null
 _facet.by.country=via land
 _facet.by.date=via dato
@@ -27,11 +26,6 @@ _facet.by.provider=via tilbyder
 _facet.by.type=via type
 _facet.by.user.tag=via brukertags
 _facet.by.year=null
-_failure.search.saved=Lagring av søk feilet
-_header.actions=via hendelser
-_header.relatedcontent=Relatert innhold
-_inc_result_table_full.description=Beskrivelse
-_language_select.italian=Italiensk
 _locale.AL=Albania
 _locale.AM=Armenia
 _locale.AT=Østerrike
@@ -86,6 +80,7 @@ _locale.fr=Fransk
 _locale.hr=Kroatisk
 _locale.hu=Ungarsk
 _locale.is=Islandsk
+_locale.it=Italiensk
 _locale.lb=Luxemburgsk
 _locale.lt=Litauisk
 _locale.lv=Lettisk
@@ -146,6 +141,7 @@ _metadata.type.images=Bilder
 _metadata.type.sounds=Lyder
 _metadata.type.texts=Tekster
 _metadata.type.video=Video
+_metadata.type.videos=Videoer
 _mine.date.saved=Dato lagret
 _mine.delete=Slett
 _mine.email.address=Emailadresse
@@ -165,11 +161,14 @@ _mine.saved.searches=Lagrede søk
 _mine.saved.tags=Lagrede tags
 _mine.user.information=Brukerinfo
 _mine.user.registration.notification.succeed=Du er nå registrert
+_mine.user.validation.username.in.use=er i bruk. Velg et annet brukernavn
 _mine.username=Brukernavn
 _portal.menu.languagedropdownlist=Språk
+_portal.ui.message.actions=via hendelser
 _portal.ui.message.less=Færre
 _portal.ui.message.more=Flere
 _portal.ui.message.noscript=Best bruk av dette nettstedet fordrer bruk av Javaskript
+_portal.ui.message.relatedcontent=Relatert innhold
 _portal.ui.message.success.search.saved=Søk lagret
 _portal.ui.message.usertags=Brukertags
 _portal.ui.messages.items=objekter
@@ -177,10 +176,11 @@ _portal.ui.navigation.matchesfor=Søkeresultat for
 _portal.ui.navigation.next=Neste
 _portal.ui.navigation.of=av
 _portal.ui.navigation.page=Side
+_portal.ui.navigation.results=Resultater
 _portal.ui.notification.error=Feil
+_portal.ui.notification.failure.search.saved=Lagring av søk feilet
 _portal.ui.notification.noitemsfound=Ingen objekter funnet
 _portal.ui.reset.searchbox=Reset
-_portal.ui.results=Resultater
 _portal.ui.viewingrelateditems=Du ser relatert innhold
 _register-request.emailalreadyregistered=Denne emailadressen er allerede registert
 _register.email.has.been.sent=En email er blitt sendt til denne adressen
@@ -211,6 +211,7 @@ _search.boolean.or=eller
 _search.field.any.field=Alle felt
 _search.field.creator=Produsent
 _search.field.date=Dato
+_search.field.description=Beskrivelse
 _search.field.provider=Tilbyder
 _search.field.subject=Tema
 _search.field.title=Tittel
@@ -282,4 +283,3 @@ _unused_portal.ui.message.view.as.xml=Se som XML
 _unused_portal.ui.message.view.with.labels=Se med labels
 _unused_portal.ui.message.view.without.labels=Se uten labels
 _unused_portal.ui.message.you.have.search.for=Du har søkt på
-_unused_validation.username.in.use=er i bruk. Velg et annet brukernavn
