--- a/portal/src/main/resources/i18n/messages_sk.properties
+++ b/portal/src/main/resources/i18n/messages_sk.properties
@@ -1,3 +1,4 @@
+_action.OpenInNewWindow=Otvorí sa v novom okne
 _action.add.annotation=null
 _action.add.tag=Pridať tag
 _action.advanced.search=Rozšírené vyhľadávanie
@@ -16,9 +17,7 @@ _action.search=Vyhľadávanie
 _action.see.all.related.items=Pozrite si všetky súvisiace položky
 _action.send=Poslať
 _action.share.with.friend=Pošlite známemu
-_action.videos=Videá
 _action.view.in.original.context=Pozrieť si v pôvodnom kontexte
-_actionOpenInNewWindow=Otvorí sa v novom okne
 _facet.by.collection=null
 _facet.by.country=Podľa krajiny
 _facet.by.date=Podľa dátumu
@@ -27,11 +26,6 @@ _facet.by.provider=Podľa poskytovateľa
 _facet.by.type=podľa typu
 _facet.by.user.tag=Podľa tagu používateľa
 _facet.by.year=null
-_failure.search.saved=Uloženie vyhľadávania zlyhalo
-_header.actions=Akcie
-_header.relatedcontent=Súvisiaci obsah
-_inc_result_table_full.description=Opis
-_language_select.italian=Taliansky (ita)
 _locale.AL=Albánsko
 _locale.AM=Arménsko
 _locale.AT=Rakúsko
@@ -86,6 +80,7 @@ _locale.fr=Francúzsky (fre)
 _locale.hr=Chorvátsky (hrv)
 _locale.hu=Maďarský (hun)
 _locale.is=Islandský (ice)
+_locale.it=Taliansky (ita)
 _locale.lb=Luxemburský (ltz)
 _locale.lt=Litovský (lit)
 _locale.lv=Lotyšský (lav)
@@ -139,6 +134,7 @@ _metadata.type.images=Obrazy
 _metadata.type.sounds=Zvuk
 _metadata.type.texts=Texty
 _metadata.type.video=Video
+_metadata.type.videos=Videá
 _mine.date.saved=Dátum uloženia
 _mine.delete=Vymazať
 _mine.email.address=E-mailová adresa:
@@ -158,11 +154,14 @@ _mine.saved.searches=Uložené vyhľadávania
 _mine.saved.tags=Uložené tagy
 _mine.user.information=Informácie o používateľovi
 _mine.user.registration.notification.succeed=Vaša registrácia bola úspešná
+_mine.user.validation.username.in.use=sa používa. Vyberte si prosím iné meno.
 _mine.username=Meno používateľa
 _portal.menu.languagedropdownlist=Jazyk
+_portal.ui.message.actions=Akcie
 _portal.ui.message.less=Menej
 _portal.ui.message.more=Viac
 _portal.ui.message.noscript=Na optimálne využitie tohto webového sídla musíte mať aktivovaný JavaScript
+_portal.ui.message.relatedcontent=Súvisiaci obsah
 _portal.ui.message.success.search.saved=Uložené vyhľadávanie
 _portal.ui.message.usertags=Používateľské tagy
 _portal.ui.messages.items=Položky
@@ -170,10 +169,11 @@ _portal.ui.navigation.matchesfor=Zhody pre
 _portal.ui.navigation.next=Nasledujúce
 _portal.ui.navigation.of=z
 _portal.ui.navigation.page=Strana
+_portal.ui.navigation.results=Výsledky
 _portal.ui.notification.error=Chyba
+_portal.ui.notification.failure.search.saved=Uloženie vyhľadávania zlyhalo
 _portal.ui.notification.noitemsfound=Nenašli sa žiadne položky
 _portal.ui.reset.searchbox=Vynulovať
-_portal.ui.results=Výsledky
 _portal.ui.viewingrelateditems=Prezeráte si súvisiace položky
 _register-request.emailalreadyregistered=Táto adresa elektronickej pošty je už registrovaná
 _register.email.has.been.sent=E-mailová spráca bola odoslaná na túto adresu
@@ -204,6 +204,7 @@ _search.boolean.or=alebo
 _search.field.any.field=Akékoľvek pole
 _search.field.creator=Tvorca
 _search.field.date=Dátum
+_search.field.description=Opis
 _search.field.provider=Poskytovateľ
 _search.field.subject=Predmet
 _search.field.title=Názov
@@ -273,4 +274,3 @@ _unused_portal.ui.message.view.as.xml=Zobraziť ako XML
 _unused_portal.ui.message.view.with.labels=Zobraziť s návestiami
 _unused_portal.ui.message.view.without.labels=Zobraziť bez návestí
 _unused_portal.ui.message.you.have.search.for=Hľadali ste
-_unused_validation.username.in.use=sa používa. Vyberte si prosím iné meno.
